update ok/pwl/pwl-4-03.md. 这是完整的脾胃盛衰论。网上流传的版本是缺少并有误的。

--- a/ok/pwl/pwl-4-03.md
+++ b/ok/pwl/pwl-4-03.md
@@ -1,8 +1,7 @@
 # 脾胃胜衰论
 
 
-
-胃中元气盛，则能食而不伤，过时而不饥。脾胃俱旺，则能食而肥；脾胃俱虚，则不能食而瘦。或少食而肥，虽肥而四肢不举，盖脾实而邪气盛也。又有善食而瘦者，胃伏火邪于气分，则能食，脾虚则肌肉削，即食亦也。叔和云∶多食亦肌虚，此之谓也。
+胃中元气盛，则能食而不伤，过时而不饥。脾胃俱旺，则能食而肥；脾胃俱虚，则不能食而瘦。或少食而肥，虽肥而四肢不举，盖脾实而邪气盛也。又有善食而瘦者，胃伏火邪于气分，则能食，脾虚则肌肉削，即食㑊也。叔和云∶多食亦肌虚，此之谓也。
 
 夫饮食不节则胃病，胃病则气短精神少而生大热，有时而显火上行，独燎其面，《黄帝针经》云∶面热者，足阳明病。胃既病，则脾无所禀受，脾为死阴，不主时也，故亦从而病焉。形体劳役则脾病，脾病则怠惰嗜卧，四肢不收，大便泄泻；脾既病，则其胃不能独行津液，故亦从而病焉。
 
@@ -10,11 +9,11 @@
 
 夫胃病其脉缓，脾病其脉迟，且其人当脐有动气，按之牢若痛，若火乘土位，其脉洪缓，更有身热心中不便之证。此阳气衰弱，不能生发，不当于五脏中用药法治之，当从《脏气法时论》中升降浮沉补泻法用药耳。
 
-如脉缓，病怠惰嗜卧，四肢不收，或大便泄泻，此湿胜，从平胃散。若脉弦，气弱自汗，四肢发热，或大便泄泻，或皮毛枯槁，发脱落，从黄 建中汤。脉虚而血弱，于四物汤中摘一味或二味，以本显证中加之。或真气虚弱，及气短脉弱，从四君子汤。或渴，或小便闭涩，赤黄多少，从五苓散去桂，摘一二味加正药中。
+如脉缓，病怠惰嗜卧，四肢不收，或大便泄泻，此湿胜，从平胃散。若脉弦，气弱自汗，四肢发热，或大便泄泻，或皮毛枯槁，发脱落，从黄芪建中汤。脉虚而血弱，于四物汤中摘一味或二味，以本显证中加之。或真气虚弱，及气短脉弱，从四君子汤。或渴，或小便闭涩，赤黄多少，从五苓散去桂，摘一二味加正药中。
 
-以上五药，当于本证中随所兼见证加减。假令表虚自汗，春夏，加黄 ；秋冬，加桂。
+以上五药，当于本证中随所兼见证加减。假令表虚自汗，春夏，加黄芪；秋冬，加桂。
 
-不转者，勿加。虽气不转，而脾胃中气不和者，勿去，但加浓朴以破滞气，然亦不可多用，于甘草五分中加一分可也。腹中夯闷，此非腹胀，乃散而不收，可加芍药收之。
+如腹中急缩，或脉弦，加防风，急甚加甘草。腹中窄狭，或气短者，亦加之。腹满气不转者，勿加。虽气不转，而脾胃中气不和者，勿去，但加厚朴以破滞气，然亦不可多用，于甘草五分中加一分可也。腹中夯闷，此非腹胀，乃散而不收，可加芍药收之。
 
 如肺气短促，或不足者，加人参、白芍药。中焦用白芍药，则脾中升阳，使肝胆之邪不敢犯也。腹中窄狭及缩急者，去之，及诸酸涩药亦不可用。
 
@@ -22,9 +21,7 @@
 
 怠惰嗜卧，有湿，胃虚不能食，或沉困，或泄泻，加苍术；自汗，加白术。
 
-小便不利，加茯苓，渴亦加之。
-
-气弱者，加白茯苓、人参；气盛者，加赤茯苓、缩砂仁；气复不能转运，有热者，微加黄连；心烦乱亦加之。
+小便不利，加茯苓，渴亦加之。气弱者，加白茯苓、人参；气盛者，加赤茯苓、缩砂仁；气复不能转运，有热者，微加黄连；心烦乱亦加之。
 
 小便少者，加猪苓、泽泻；汗多津液竭于上，勿加之。是津液还入胃中，欲自行也。不渴而小便闭塞不通，加炒黄柏、知母。
 
@@ -34,21 +31,21 @@
 
 窍不利而淋，加泽泻、炒滑石。只治窍不利者，六一散中加木通亦可。心脏热者，用钱氏方中导赤散。
 
-中满或但腹胀者，加浓朴；气不顺，加橘皮；气滞，加青皮一、橘皮三。
+中满或但腹胀者，加厚朴；气不顺，加橘皮；气滞，加青皮一、橘皮三。
 
-气短小便利者，四君子汤中去茯苓，加黄 以补之；如腹中气不转者，更加甘草一半。
+气短小便利者，四君子汤中去茯苓，加黄芪以补之；如腹中气不转者，更加甘草一半。
 
-也，血虚则里急；或血气虚弱而目睛痛者，皆加当归身。
+腹中刺痛，或周身刺痛者；或里急者，腹中不宽快是也；或虚坐而大便不得者，皆血虚也，血虚则里急；或血气虚弱而目睛痛者，皆加当归身。
 
 头痛者，加川芎；苦头痛，加细辛，此少阴头痛也。
 
 发脱落及脐下痛，加熟地黄。
 
-予平昔调理脾胃虚弱，于此五药中加减，如五脏证中互显一二证，各对证加药，无不验，然终不能使人完复，后或有因而再至者，亦由督、任、冲三脉为邪，皆胃气虚弱之所致也。法虽根据证加减，执方料病，不根据《素问》法度耳，是以检讨《素问》《难经》及《黄帝针经》中说脾胃不足之源，乃阳气不足，阴气有余，当从六气不足，升降浮沉法，随证用药治之。盖脾胃不足，不同余脏，无定体故也。其治肝、心、肺、肾，有余不足，或补或泻，惟益脾胃之药为切。
+予平昔调理脾胃虚弱，于此五药中加减，如五脏证中互显一二证，各对证加药，无不验，然终不能使人完复，后或有因而再至者，亦由督、任、冲三脉为邪，皆胃气虚弱之所致也。法虽根据证加减，执方料病，不依《素问》法度耳，是以检讨《素问》《难经》及《黄帝针经》中说脾胃不足之源，乃阳气不足，阴气有余，当从六气不足，升降浮沉法，随证用药治之。盖脾胃不足，不同余脏，无定体故也。其治肝、心、肺、肾，有余不足，或补或泻，惟益脾胃之药为切。
 
-经云∶至而不至，是为不及，所胜妄行，所生受病，所不胜乘之也。至而不至者，谓从后来者为虚邪，心与小肠来乘脾胃也。脾胃脉中见浮大而弦，其病或烦躁闷乱，或四肢发热，或口干舌干咽干。盖心主火，小肠主热，火热来乘土位，乃湿热相合，故烦躁闷乱也。四肢者，脾胃也，火乘之，故四肢发热也。饮食不节，劳役所伤，以致脾胃虚弱，乃血所生病，主口中津液不行，故口干咽干也。病患自以为渴，医者治以五苓散，谓止渴燥，而反加渴燥，乃重竭津液，以至危亡。经云∶虚则补其母。当于心与小肠中以补脾胃之根蒂者。甘温之药为之主，以苦寒之药为之使，以酸味为之臣佐。以其心苦缓，急食酸以收之。心火旺则肺金受邪，金虚则以酸补之，次以甘温及甘寒之剂，于脾胃中泻心火之亢盛，是治其本也。
+经言∶至而不至，是为不及，所胜妄行，所生受病，所不胜乘之也。至而不至者，谓从后来者为虚邪，心与小肠来乘脾胃也。脾胃脉中见浮大而弦，其病或烦躁闷乱，或四肢发热，或口干舌干咽干。盖心主火，小肠主热，火热来乘土位，乃湿热相合，故烦躁闷乱也。四肢者，脾胃也，火乘之，故四肢发热也。饮食不节，劳役所伤，以致脾胃虚弱，乃血所生病，主口中津液不行，故口干咽干也。病患自以为渴，医者治以五苓散，谓止渴燥，而反加渴燥，乃重竭津液，以至危亡。经云，虚则补其母。当于心与小肠中以补脾胃之根蒂者。甘温之药为之主，以苦寒之药为之使，以酸味为之臣佐。以其心苦缓，急食酸以收之。心火旺则肺金受邪，金虚则以酸补之。次以甘温及甘寒之剂，于脾胃中泻心火之亢盛，是治其本也。
 
-所胜妄行者，言心火旺能令母实，母者，肝木也，肝木旺则挟火势，无所畏惧而妄行也，故脾胃先受之。或身体沉重，走疰疼痛，盖湿热相搏，而风热郁而不得伸，附着于有形也。或多怒者，风热下陷于地中也。或目病而生内障者，脾裹血，胃主血，心主脉，脉者，血之腑也，或云心主血，又云肝主血，肝之窍开于目也。或妄见妄闻，起妄心，夜梦亡人，四肢满闭，转筋，皆肝木火盛而为邪也。或生痿，或生痹，或生厥，或中风，或生恶疮，或作肾痿，或为上热下寒，为邪不一，皆风热不得升长，而木火遏于有形中也。
+所胜妄行者，言心火旺能令母实，母者，肝木也，肝木旺则挟火势，无所畏惧而妄行也，故脾胃先受之。或身体沉重，走疰疼痛，盖湿热相搏，而风热郁而不得伸，附著于有形也。或多怒者，风热下陷于地中也。或目病而生内障者，脾裹血，胃主血，心主脉，脉者，血之腑也，或云心主血，又云肝主血，肝之窍开于目也。或妄见妄闻，起妄心，夜梦亡人，四肢满闭，转筋，皆肝木火盛而为邪也。或生痿，或生痹，或生厥，或中风，或生恶疮，或作肾痿，或为上热下寒，为邪不一，皆风热不得升长，而木火遏于有形中也。
 
 所生受病者，言肺受土火木之邪，而清肃之气伤。或胸满少气短气者，肺主诸气，五脏之气皆不足，而阳道不行也。或咳嗽寒热者，湿热乘其内也。
 
@@ -56,30 +53,44 @@
 
 夫脾胃不足，皆为血病，是阳气不足，阴气有余，故九窍不通。诸阳气根于阴血中，阴血受火邪则阴盛，阴盛则上乘阳分，而阳道不行，无生发升腾之气也。夫阳气走空窍者也，阴气附形质者也，如阴气附于土，阳气升于天，则各安其分也。
 
-今所立方中，有辛甘温药者，非独用也；复有甘苦大寒之剂，亦非独用也。以火、酒二制为之使，引苦甘寒药至顶，而复入于肾肝之下，此所谓升降浮沉之道，自耦而奇，奇而至耦者也。（阳分奇，阴分偶。）泻阴火以诸风药，升发阳气以滋肝胆之用，是令阳气生，上出于阴分，末用辛甘温药接其升药，使大发散于阳分，而令走九窍也。
+今所立方中，有辛甘温药者，非独用也；复有甘苦大寒之剂，亦非独用也。以火、酒二制为之使，引苦甘寒药至顶，而复入于肾肝之下，此所谓升降浮沉之道，自耦而奇，奇而至耦者也。阳分奇，阴分偶。泻阴火以诸风药，升发阳气以滋肝胆之用，是令阳气生，上出于阴分，末用辛甘温药接其升药，使大发散于阳分，而令走九窍也。
 
-经云∶食入于胃，散精于肝，淫气于筋。食入于胃，浊气归心，淫精于脉，脉气流经，经气归于肺，肺朝百脉，输精于皮毛，毛脉合精，行气于腑。且饮食入胃，先行阳道，而阳气升浮也。浮者，阳气散满皮毛；升者，充塞头顶，则九窍通利也。若饮食不节，损其胃气，不能克化，散于肝，归于心，溢于肺，食入则昏冒欲睡，得卧则食在一边，气暂得舒，是知升发之气不行者此也。经云∶饮入于胃，游溢精气，上输于脾，脾气散精，上归于肺。
+经云∶食入于胃，散精于肝，淫气于筋。食入于胃，浊气归心，淫精于脉，脉气流经，经气归于肺，肺朝百脉，输精于皮毛，毛脉合精，行气于腑。且饮食入胃，先行阳道，而阳气升浮也。浮者，阳气散满皮毛；升者，充塞头顶，则九窍通利也。若饮食不节，损其胃气，不能克化、散于肝、归于心、溢于肺，食入则昏冒欲睡，得卧则食在一边，气暂得舒，是知升发之气不行者此也。
 
-病患饮入胃，遽觉至脐下，便欲小便，由精气不输于脾，不归于肺，则心火上攻，使口燥咽干，是阴气大盛，其理甚易知也。况脾胃病则当脐有动气，按之牢若痛，有是者乃脾胃虚，无是则非也，亦可作明辨矣。
+经云∶饮入于胃，游溢精气，上输于脾，脾气散精，上归于肺。病人饮入胃，遽觉至脐下，便欲小便，由精气不输于脾，不归于肺，则心火上攻，使口燥咽干，是阴气大盛，其理甚易知也。况脾胃病则当脐有动气，按之牢若痛，有是者乃脾胃虚，无是则非也，亦可作明辨矣。
 
 脾胃不足，是火不能生土，而反抗拒，此至而不至，是为不及也。
 
-白术（君），人参（臣），甘草（佐），芍药（佐），黄连（使），黄 （臣），桑白皮（佐）。
+白术(君) 人参(臣) 甘草(佐) 芍药(佐) 黄连(使) 黄芪(臣) 桑白皮(佐)。
 
 诸风药皆是风能胜湿也，及诸甘温药亦可。
 
-心火亢盛，乘于脾胃之位，亦至而不至，是为不及也。黄连（君），黄柏（臣），生地黄（臣），芍药（佐），石膏（佐），知母（佐），黄芩（佐），甘草（佐）。
+心火亢盛，乘于脾胃之位，亦至而不至，是为不及也。
+
+黄连(君) 黄柏(臣) 生地黄(臣) 芍药(佐) 石膏(佐) 知母(佐) 黄芩(佐) 甘草(佐)。
 
 肝木妄行，胸胁痛，口苦舌干，往来寒热而呕，多怒，四肢满闭，淋溲便难，转筋，腹中急痛，此所不胜乘之也。
 
-羌活（佐），防风（臣），升麻（使），柴胡（君），独活（佐），芍药（臣），甘草（臣），白术（佐），茯苓（佐），猪苓、泽泻（佐），肉桂（臣）， 本、川芎、细辛、蔓荆子、白芷、石膏、黄柏（佐），知母、滑石。
+羌活(佐) 防风(臣) 升麻(使) 柴胡(君) 独活(佐) 芍药(臣) 甘草(臣) 白术(佐) 茯苓(佐) 猪苓、泽泻(佐) 肉桂(臣) 藁本 川芎 细辛 蔓荆子 白芷 石膏 黄柏(佐) 知母 滑石
 
 肺金受邪，由脾胃虚弱，不能生肺，乃所生受病也。故咳嗽气短、气上，皮毛不能御寒，精神少而渴，情惨惨而不乐，皆阳气不足，阴气有余，是体有余而用不足也。
 
-人参（君），白术（佐），白芍药（佐），橘皮（臣），青皮（以破滞气），黄 （臣），桂枝（佐），桔梗（引用），桑白皮（佐），甘草（诸酸之药皆可），木香（佐），槟榔、五味子（佐，此三味除客气）。
+人参(君) 白术(佐) 白芍药(佐) 橘皮(臣) 青皮(以破滞气) 黄芪(臣) 桂枝(佐) 桔梗(引用) 桑白皮(佐) 甘草(诸酸之药皆可) 木香(佐) 槟榔 五味子(佐，此三味除客气)
 
-肾水反来侮土，所胜者妄行也。作涎及清涕，唾多，溺多，而恶寒者是也。土火复之，及三脉为邪，则足不任身，足下痛，不能践地，骨之无力，喜睡，两丸冷，腹阴阴而痛，妄闻妄见，腰脊背胛皆痛。
+肾水反来侮土，所胜者妄行也。作涎及清涕，唾多、溺多、而恶寒者是也。土火复之，及三脉为邪，则足不任身，足下痛，不能践地，骨之无力，喜睡，两丸冷，腹阴阴而痛，妄闻妄见，腰脊背胛皆痛。
 
-干姜（君），白术（臣），苍术（佐），附子（佐炮，少许），肉桂（佐去皮，少许），川乌头（臣），茯苓（佐），泽泻（使），猪苓（佐）。
+干姜(君) 白术(臣) 苍术(佐) 附子(佐，炮，少许) 肉桂(佐，去皮，少许) 川乌头(臣) 茯苓(佐) 泽泻(使 猪苓佐)
 
-夫饮食入胃，阳气上行，津液与气，入于心，贯于肺，充实皮毛，散于百脉。脾禀气于胃，而灌溉四旁，营养气血者也。今饮食损胃，劳倦伤脾，脾胃虚则火邪乘之，而生大热，当先于心分补脾之源，盖土生于火，兼于脾胃中泻火之亢甚，主生化之源；足阳明为十二经之海，主经营之气，诸经皆禀之。言阳明，厥阴与何经相并而为病，酌中以用药，如权之在衡，在两则有在两之中，在斤则有在斤之中也。所以言此者，发明脾胃之病，不可一例而推之，不可一途而取之，欲人知百病皆由脾胃衰而生也，毫厘之失，则灾害立生。假如时在长夏，于长夏之令中立方，谓正当主气衰而客气旺之时也，后之处方者，当从此法加时令药，名曰补脾胃泻阴火升阳汤。
+夫饮食入胃，阳气上行，津液与气，入于心，贯于肺，充实皮毛，散于百脉。脾禀气于胃，而灌溉四旁，营养气血者也。今饮食损胃，劳倦伤脾，脾胃虚则火邪乘之，而生大热，当先于心分补脾之源，盖土生于火，兼于脾胃中泻火之亢甚，是先治其标，后治其本也。且湿热相合，阳气日以虚，阳气虚则不能上升，而脾胃之气下流，并于肾肝，是有秋冬而无春夏。春主升，夏主浮，在人则肝心应之。弱则阴气盛，故阳气不得经营。经云∶阳本根于阴，惟泻阴中之火，味薄风药，升发以伸阳气，则阴气不病，阳气生矣。传云∶履端于始，序则不愆，正谓此也。
+
+《四气调神大论》云∶天明则日月不明，邪害空窍，阳气者闭塞，地气者冒明，云雾不精，则上应白露不下，在人则缘胃虚，以火乘之。脾为劳倦所伤，劳则气耗，而心火炽动，血脉沸腾，则血病，而阳气不治，阴火乃独炎上，而走于空窍，以至燎于周身，反用热药以燥脾胃，则谬之谬也。
+
+胃乃脾之刚，脾乃胃之柔，表里之谓也。饮食不节，则胃先病，脾无所禀而后病；劳倦则脾先病，不能为胃行气而后病。其所生病之先后虽异，所受邪则一也。胃为十二经之海，十二经皆禀血气，滋养于身，脾受胃之禀，行其气血也。脾胃既虚，十二经之邪，不一而出。假令不能食而肌肉削，乃本病也。其右关脉缓而弱，本脉也。而本部本证脉中兼见弦脉，或见四肢满闭，淋溲便难，转筋一二证，此肝之脾胃病也。当于本经药中，加风药以泻之。本部本证脉中兼见洪大，或见肌热，烦热，面赤而不能食，肌内消一二证，此心之脾胃病也。当于本经药中，加泻心火之药。本部本证脉中兼见浮涩，或见气短、气上，喘咳、痰盛，皮涩一二证，此肺之脾胃病也。当于本经药中，兼泻肺之体，及补气之药。本部本证脉中兼见沉细，或见善恐欠之证，此肾之脾胃病也，当于本经药中，加泻肾水之浮，及泻阴火伏炽之药。
+
+经云∶病有逆从，治有反正，除四反治法，不须论之。其下云∶惟有阳明、厥阴，不从标本，从乎中也。其注者，以阳明在上，中见太阴，厥阴在上，中见少阳为说，予独谓不然，此中，非中外之中也，亦非上中之中也，乃不定之辞，盖欲人临病消息，酌中用药耳，以手足阳明、厥阴者，中气也，在卯酉之分，天地之门户也。春分、秋分，以分阴阳也，中有水火之异者也，况手厥阴为十二经之领袖，主生化之源；足阳明为十二经之海，主经营之气，诸经皆禀之。言阳明、厥阴与何经相并而为病，酌中以用药，如权之在衡。在两，则有在两之中；在斤，则有在斤之中也。所以言此者，发明脾胃之病，不可一例而推之，不可一途而取之，欲人知百病皆由脾胃衰而生也，毫厘之失，则灾害立生。假如时在长夏，于长夏之令中立方，谓正当主气衰而客气旺之时也，后之处方者，当从此法，加时令药，名曰补脾胃泻阴火升阳汤。
+
+**补脾胃泻阴火升阳汤**
+
+柴胡(一两五钱) 甘草(炙) 黄芪(臣) 苍术(泔浸，去黑皮，切作片子，日曝干，锉碎炒) 羌活(以上各一两) 升麻(八钱) 人参(臣) 黄芩(以上各七钱) 黄连(去须，酒制，五钱炒，为臣为佐) 石膏(少许，长夏微用，过时去之，从权)
+
+上件㕮咀，每服三钱，水二盏，煎至一盏，去渣，大温服，早饭后、午饭前，间日服。服药之时，宜减食，宜美食。服药讫，忌语话一二时辰许，及酒、湿面、大料物之类，恐大湿热之物，复助火邪而愈损元气也。亦忌冷水及寒凉淡渗之物及诸果，恐阳气不能生旺也。宜温食及薄滋味，以助阳气。大抵此法此药，欲令阳气升浮耳，若渗泄淡味，皆为滋阴之味，为大禁也。虽然，亦有从权而用之者。如见肾火旺及督、任、冲三脉盛，则用黄柏、知母，酒洗讫，火炒制加之，若分两则临病斟酌，不可久服，恐助阴气而为害也。小便亦或涩，当利之，大便涩，当行之，此亦从权也，得利则勿再服。此虽立食禁法，若可食之物，一切禁之，则胃气失所养也，亦当从权而食之，以滋胃也。
