--- a/ok/pwl/pwl-4-05.md
+++ b/ok/pwl/pwl-4-05.md
@@ -1,5 +1,13 @@
 # 肺之脾胃虚论
 
+脾胃之虚，怠惰嗜卧，四肢不收，时值秋燥令行，湿热少退，体重节痛，口苦舌干，食无味，大便不调，小便频数，不嗜食，食不消。兼见肺病，洒淅恶寒，惨惨不乐，面色恶而不和，乃阳气不伸故也。当升阳益胃，名之曰升阳益胃汤。
 
+**升阳益胃汤**
 
-脾胃之虚，怠惰嗜卧，四肢不收，时值秋燥令行，湿热少退，体重节痛，口苦舌干，食无味，大便不调，小便频数，不嗜食，食不消。兼见肺病，沥淅恶寒，惨惨不乐，面色恶而不和，乃阳气不伸故也。当升阳益胃，名之曰升阳益胃汤。
+黄芪(二两) 半夏(汤洗，此一味脉涩者宜用) 人参(去芦) 甘草(炙，已上各一两) 防风(以其秋旺，故以辛温泻之) 白芍药 羌活 独活(以上各五钱) 橘皮(连瓤，四钱) 茯苓(小便利、不渴者勿用) 泽泻(不淋勿用) 柴胡 白术(已上各三钱) 黄连(二钱)
+
+何故秋旺用人参、白术、芍药之类反补肺，为脾胃虚则肺最受病，故因时而补，易为力也。
+
+上㕮咀，每服三钱，生姜五片，枣二枚，去核，水三盏，同煎至一盏，去渣，温服，早饭、午饭之间服之。禁忌如前。其药渐加至五钱止。服药后，如小便罢而病加增剧，是不宜利小便，当少去茯苓、泽泻。
+
+若喜食，初一二日不可饱食，恐胃再伤，以药力尚少，胃气不得转运升发也。须薄滋味之食，或美食，助其药力，益升浮之气，而滋其胃气也。慎不可淡食，以损药力，而助邪气之降沉也。可以小役形体，使胃与药得转运升发，慎勿大劳役，使气复伤。若脾胃得安静尤佳。若胃气少觉强壮，少食果，以助谷药之力。经云∶五谷为养，五果为助者也。
