--- a/ok/bc/bc01-1.1.14.0.0.md
+++ b/ok/bc/bc01-1.1.14.0.0.md
@@ -1,10 +1,10 @@
 ### 葱白
 
-〔原文〕生辛散，熟甘温。<small>陶弘景曰：白冷青热，伤寒汤中不得用青</small>。 外实中空，肺之菜也。肺主皮毛、其合阳明，<small>大肠</small>。故发汗解肌，以通上下阳气。<small>仲景，白通汤，通脉四逆汤，并加之以通脉回阳</small>。益目睛，<small>白睛属肺</small>。利耳鸣，通
-二便，<small>时珍曰：葱管吹盐入玉茎中，治小便不通、及转浮危急者极效</small>。治伤寒头痛,时疾热狂,阴毒腹痛。<small>阴证厥逆，用葱白安脐上熨之</small>，气通则血活，<small>气为血帅</small>。故治吐血衄血，便血痢血。<small>《食医心镜》：葱煮粥食，治赤白痢，薤粥亦良</small>。折伤血出，<small>火煨研封，止痛无瘢</small>。乳痈风痹，通乳安胎。<small>妇人妊娠伤寒，葱白一物汤，发汗而安胎，加生姜亦佳。《删繁方》合香豉、阿胶，治胎动</small>。通气故能解毒，杀药毒、鱼肉毒、蚯蚓毒、?犬毒<sup>（1）</sup>，诸物皆宜，故曰菜伯，又曰和事草。取白连须用，亦有用青者。同蜜食杀人，同枣食令人病。<small>《百一方》，患外痔
-者，先用木鳖煎汤熏洗，以青葱涎对蜜凋敷，其凉如冰。《独行方》:水病足肿，煮汤渍之，日三五度佳。</small>
+〔原文〕生辛散，熟甘温。<small>陶弘景曰：白冷青热，伤寒汤中不得用青</small>。 外实中空，肺之菜也。肺主皮毛、其合阳明，<small>大肠</small>。故发汗解肌，以通上下阳气。<small>仲景白通汤，通脉四逆汤，并加之以通脉回阳</small>。益目睛，<small>白睛属肺</small>。利耳鸣，通
+二便，<small>时珍曰：葱管吹盐入玉茎中，治小便不通、及转脬危急者极效</small>。治伤寒头痛,时疾热狂,阴毒腹痛。<small>阴证厥逆，用葱白安脐上熨之</small>，气通则血活，<small>气为血帅</small>。故治吐血衄血，便血痢血。<small>《食医心镜》：葱煮粥食，治赤白痢，薤粥亦良</small>。折伤血出，<small>火煨研封，止痛无瘢</small>。乳痈风痹，通乳安胎。<small>妇人妊娠伤寒，葱白一物汤，发汗而安胎，加生姜亦佳。《删繁方》合香豉、阿胶，治胎动</small>。通气故能解毒，杀药毒、鱼肉毒、蚯蚓毒、猘犬毒<sup>（1）</sup>，诸物皆宜，故曰菜伯，又曰和事草。取白连须用，亦有用青者。同蜜食杀人，同枣食令人病。<small>《百一方》：患外痔
+者，先用木鳖煎汤熏洗，以青葱涎对蜜调敷，其凉如冰。《独行方》:水病足肿，煮汤渍之，日三五度佳。</small>
 
-【讲解】（1）?犬：即疯狗。
+【讲解】（1）猘犬：即疯狗。
 
 
 
