--- a/ok/bc/bc01-1.1.14.0.0.md
+++ b/ok/bc/bc01-1.1.14.0.0.md
@@ -14,9 +14,9 @@
 或膀胱气化失司之尿闭等证，皆可应用。至于治吐血衄血，便血痢血者，《纲目》虽云本品有通气之功，通气故能解毒及理血病。
 气者，血之帅也，气通则血活，故本品治瘀阻血不归经之吐衄尚可，若于血热妄行之失血证，则当忌用。而在前者，亦较少应用。
 
-【临证应用】葱白发汗解表，然力较弱，主用于感冒风寒初起的轻证,常与生姜或豆豉同用，以增强发汗解表之力。前者为葱白汤，后者即葱豉汤。用于阴寒内盛于下、阳气浮越于上的
+【临证应用】葱白发汗解表，然力较弱，主用于感冒风寒初起的轻证，常与生姜或豆豉同用，以增强发汗解表之力。前者为葱白汤，后者即葱豉汤。用于阴寒内盛于下、阳气浮越于上的
 少阳下利脉微证，主要和附子、干姜配伍，如白通汤，方取姜、
 附散阴寒以回阳，葱白通阳气而止利。亦可炒热外熨腹部，以治寒凝气阻的腹部冷痛及小便不利，此亦取其散寒通阳之能。
 
-【用量用法】 6-10克，或3— 5段，煎服。外用适量。
+【用量用法】 6—10克，或3—5段，煎服。外用适量。
 忌与蜂蜜共服。
