--- a/ok/bc/bc01-1.1.15.0.0.md
+++ b/ok/bc/bc01-1.1.15.0.0.md
@@ -1,6 +1,6 @@
 ### 胡荽
 
-〔原文〕辛温香窜。内通心脾，外达四肢，辟一切不正之气。痧疹痘疮不出，煎酒喷之。<small>心脾之气，得芳香而运行。含喷遍身，勿?头面。痘疹家悬挂，辟邪恶。故荽入食，令人多忘。病人不宜食胡荽、黄花菜。</small>
+〔原文〕辛温香窜。内通心脾，外达四肢，辟一切不正之气。痧疹痘疮不出，煎酒喷之。<small>心脾之气，得芳香而运行。含喷遍身，勿噀头面。痘疹家悬挂，辟邪恶。故荽入食，令人多忘。病人不宜食胡荽、黄花菜。</small>
 
 **【讲解】胡荽善散风寒，功专透疹。**为伞形科一年生草本植物胡荽的全草，又名芫荽。晒干生用或鲜用。
 
