--- a/ok/bc/bc01-1.1.16.0.0.md
+++ b/ok/bc/bc01-1.1.16.0.0.md
@@ -4,10 +4,10 @@
 
 **【讲解】 赤柽柳宣发升散，功专透疹。**为柽科落叶灌木
 或小乔木柽柳的嫩枝叶，又名西河柳。晒干，切段生用。
+
 本品味辛、性平。人肺、胃、心经。具有发汗透疹之功。借其辛散宣发之性，可促使疹子外透，用于麻疹初期透发不畅，或因风寒外束、疹毒内陷之证。
 
 【临证应用】 赤柽柳煎汤熏洗，可发汗透疹,或配伍竹叶、
-牛蒡子、蝉衣等，如竹叶柳蒡汤。此外，煎汤沐浴，可治风疹瘙
-痒。若配合祛风湿药，可治风湿痹证。
+牛蒡子、蝉衣等，如竹叶柳蒡汤。此外，煎汤沐浴，可治风疹瘙痒。若配合祛风湿药，可治风湿痹证。
 
 【用量用法】 3—6克，煎服。外用适量。麻疹已透者不宜用。过量可令人心烦。
