update ok/pwl/pwl-4-08.md. 重新校出完整版本《分经随病制方》。

--- a/ok/pwl/pwl-4-08.md
+++ b/ok/pwl/pwl-4-08.md
@@ -1,5 +1,42 @@
 # 分经随病制方
 
 
-
 《脉经》云∶风寒汗出，肩背痛，中风，小便数而欠者，风热乘其肺，使肺气郁甚也，当泻风热，以通气防风汤主之。
+
+**通气防风汤**
+
+柴胡 升麻 黄芪(已上各一钱) 羌活 防风 橘皮 人参 甘草(已上各五分) 藁本(三分) 青皮 白豆蔻仁 黄柏(已上各二分)
+
+上㕮咀。都作一服，水二大盏，煎至一盏，去渣，温服，食后。气盛者，宜服；面白脱色，气短者，勿服。
+
+如小便遗失者，肺气虚也，宜安卧养气，禁劳役，以黄芪、人参之类补之.不愈，当责有热，加黄柏、生地黄。
+
+如肩背痛，不可回顾，此手太阳气郁而不行，以风药散之。
+
+如脊痛，项强腰似折，项似拔，上冲头痛者，乃足太阳经之不行也，以羗活胜湿汤主之。
+
+**羌活胜湿汤**
+
+羌活 独活(已上各一钱) 甘草(炙) 藁本 防风(已上各五分) 蔓荆子(三分) 川芎(二分)
+
+上件㕮咀，都作一服，水二盏，煎至一盏，去渣，温服，食后。
+
+如身重，腰沉沉然，乃经中有湿热也，更加黄柏一钱，附子半钱，苍术二钱。
+
+如腿脚沉重无力者，加酒洗汉防己半钱，轻则附子，重则川乌头少许，以为引用而行经也。
+
+如卧而多惊，小便淋溲者，邪在少阳、厥阴，亦用太阳经药，更加柴胡半钱。如淋，加泽泻半钱。此下焦风寒二经合病也。经云，肾肝之病同一治，为俱在下焦，非风药行经不可也。
+
+如大便后有白脓，或只便白脓者，因劳役气虚，伤大肠也，以黄芪人参汤补之；如里急频见者，血虚也，更加当归。
+
+如肺胀，膨膨而喘咳，胸高气满壅盛而上奔者，多加五味子，人参次之，麦门冬又次之，黄连少许。
+
+如甚则交两手而瞀者，真气大虚也。若气短，加黄芪、五味子、人参。气盛，加五味子、人参、黄芩、荆芥穗；冬月，去荆芥穗，加草豆蔻仁。
+
+如嗌痛颔肿，脉洪大，面赤者，加黄芩、桔梗、甘草各五分。
+
+如耳鸣目黄，颊颔肿，颈、肩、臑、肘、臂外后廉痛，面赤，脉洪大者，以羌活、防风、甘草、藁本，通其经血；加黄芩、黄连消其肿；以人参、黄芪益其元气而泻其火邪。如脉紧者，寒也，或面白善嚏，或面色恶，皆寒也，亦加羌活等四味。当泻足太阳，不用连、芩，少加附子以通其脉；面色恶，多悲恐者，更加桂、附。
+
+如便白脓，少有滑，频见污衣者，气脱，加附子皮，甚则加米壳。
+
+如气涩者，只以甘药补气，当安卧不语，以养其气。
