update ok/pwl/pwl-4-10.md. 《分经随病制方》已经校对完整，包含此内容。此页应删除。

--- a/ok/pwl/pwl-4-10.md
+++ b/ok/pwl/pwl-4-10.md
@@ -1,27 +1,4 @@
 # 羌活胜湿汤
 
 
-
-羌活 独活（以上各一钱） 甘草（炙） 本 防风（以上各五分） 蔓荆子（三分） 川芎（二分）
-
-上件 咀。都作一服，水二盏，煎至一盏，去渣，温服，食后。
-
-如身重，腰沉沉然，乃经中有湿热也，更加黄柏一钱，附子半钱，苍术二钱。
-
-如腿脚沉重无力者，加酒洗汉
-
-如卧而多惊，小便淋溲者，邪
-
-合病也
-
-如大便后有白脓，或只便白脓者，因劳役气虚，伤大肠也，以黄 人参汤补之；如里急频见者，血虚也，更加当归。
-
-如肺少许。
-
-如甚则交两手而瞀者，真气大虚也，若气短，加黄 、五味子、人参；气盛，加五味子、人参、黄芩、荆芥穗；冬月，去荆芥穗，加草豆蔻仁。
-
-如嗌痛颔肿，脉洪大，面赤者，
-
-如耳鸣目黄，颊颔肿，颈、肩、 、肘、臂外后廉痛，面赤，脉洪大者，以羌活、防风、甘草、 本，通其经血，加黄芩、黄连消其肿，以人参、黄益其元气而泻其火邪；如脉紧者，寒也，或面白善嚏，或面色恶，皆寒也，亦加羌活等四味，当泻足太阳，不用连、芩，少加附子以通其脉；面色恶，多悲恐者，更加桂、附。
-
-如便白脓，少有滑，频见汗衣者，气脱，加附子皮，甚则加米壳；如气涩者，只以甘药补气，当安卧不语，以养其气。
+《分经随病制方》已经校对完整，包含此内容。此页应删除。
