--- a/ok/bc/bc01-1.1.17.0.0.md
+++ b/ok/bc/bc01-1.1.17.0.0.md
@@ -16,6 +16,6 @@
 
 【临证应用】鸡苏的功用，类似紫苏、薄荷。《医林篡要》
 曰：鸡苏功用略似紫苏，而解毒不如；亦略似薄荷，而清凉不及。
-《本草求真 > 曰：但苏、薄其性稍凉，水苏其性稍温；苏、薄其
+《本草求真》 曰：但苏、薄其性稍凉，水苏其性稍温；苏、薄其
 性主升，水苏其性主降；薄多于气分疏散，水苏多于血分温利。
 然临床不及紫苏、薄荷常用。
