update ok/ya/ya02-0.8.0.0.0.md. 修正别字。规范语法。

--- a/ok/ya/ya02-0.8.0.0.0.md
+++ b/ok/ya/ya02-0.8.0.0.0.md
@@ -2,12 +2,12 @@
 
 尝记一亲戚病伤寒，身热头疼无汗，大便不通已四五日。予讯问之，见医者治[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)、朴硝等欲下之。予曰：子故少待，予为视之。脉浮缓，卧密室中，自称其恶风。予曰：表证如此，虽大便不通数日，腹又不胀，别无所苦，何遽便下。大抵仲景法，须表证罢，方可下。不尔，邪乘虚入，不为结胸①，必为热利也。予作[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)各半汤，继以小[柴胡](https://www.gmzyjc.com/read/bc/bc01-1.2.9.0.0.md)，漐漐②汗出，大便亦通而解。
 
-（《普济本事方》巻九）
+（《普济本事方》卷九）
 
-〔注释〕
+〔**注释**〕
 
 ①结胸：指邪气结于胸中，出现心下痛，按之硬满的病证。
 
 ②漐（zhē折）漐：微微汗出的样子。
 
-〔评按〕此例表证未罢，虽大便不通数日，而腹无胀满，说明里无燥实之邪，故许氏反对通下，径于解表，先用[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)各半汤小发汗，使邪从汗解而正亦不伤；继以[小柴胡汤](https://www.gmzyjc.com/read/fjx/fjx02-0.1.0.0.0.md)和解表里，使外邪去除，胃气因和，津液得下，大便自通而病愈。许氏于此案审证求因，治法切中病本，可谓深得仲景心法。
+〔**评按**〕此例表证未罢，虽大便不通数日，而腹无胀满，说明里无燥实之邪，故许氏反对通下，径于解表，先用[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)各半汤小发汗，使邪从汗解而正亦不伤；继以[小柴胡汤](https://www.gmzyjc.com/read/fjx/fjx02-0.1.0.0.0.md)和解表里，使外邪去除，胃气因和，津液得下，大便自通而病愈。许氏于此案审证求因，治法切中病本，可谓深得仲景心法。
