--- a/ok/bc/bc01-1.2.1.0.0.md
+++ b/ok/bc/bc01-1.2.1.0.0.md
@@ -1,6 +1,6 @@
 ### 薄荷
 
-〔原文〕辛能散，凉能清，<small>《本经》:温,盖体温而用凉也。</small>升浮能发汗。搜肝气而抑肺盛，消散风热，清利头目。治头痛头风<sup>（1）</sup>，中风失音，痰嗽口气，语涩舌胎，<small>含漱</small>。眼耳咽喉，口齿诸病，<small>凡香通窍而散风热</small>。皮肤瘾疹<sup>(2)</sup>，瘰疬疮疥，惊热 <small>凡小儿治惊药，俱宜薄荷汤调</small>。骨蒸,破血<sup>(3)</sup>。<small>能治血痢。血痢病在凝滞，辛能散，
+〔原文〕辛能散，凉能清，<small>《本经》：温,盖体温而用凉也。</small>升浮能发汗。搜肝气而抑肺盛，消散风热，清利头目。治头痛头风<sup>（1）</sup>，中风失音，痰嗽口气，语涩舌胎，<small>含漱</small>。眼耳咽喉，口齿诸病，<small>凡香通窍而散风热</small>。皮肤瘾疹<sup>(2)</sup>，瘰疬疮疥，惊热 <small>凡小儿治惊药，俱宜薄荷汤调</small>。骨蒸，破血<sup>(3)</sup>。<small>能治血痢。血痢病在凝滞，辛能散，
 凉能清</small>。虚人不宜多服。<small>能发汗疏表，夏月多服，泄人元气。</small>苏产气芳者良。<small>薄荷，猫之酒也；犬，虎之酒也；娱蚣，鸡之酒也，桑椹，鸠之酒也，莽草，鱼之酒也，食之皆醉。被猫伤者，薄荷汁涂之</small>。
 
 【讲解】（1）头风：病证名。指头痛经久不愈，时作时止，甚至一触即发的病证。（2）瘾疹：病名。即荨麻疹，为常见的皮肤过敏性疾病。皮肤见有大小不等的块状、片状的皮疹，时隐时现，剧痒。（3）破血：用活血力量较峻烈的药物祛除瘀血的治疗方法。
