--- a/ok/bc/bc01-1.2.1.0.0.md
+++ b/ok/bc/bc01-1.2.1.0.0.md
@@ -5,9 +5,9 @@
 
 【讲解】（1）头风：病证名。指头痛经久不愈，时作时止，甚至一触即发的病证。（2）瘾疹：病名。即荨麻疹，为常见的皮肤过敏性疾病。皮肤见有大小不等的块状、片状的皮疹，时隐时现，剧痒。（3）破血：用活血力量较峻烈的药物祛除瘀血的治疗方法。
 
-**薄荷轻清凉散，以疏散风热，清利头目为其特点。**为唇形科多年生草本植物薄荷的茎叶。南北均产，以江苏产者最佳，故有“苏薄荷"之称。
+**薄荷轻清凉散，以疏散风热，清利头目为其特点。**为唇形科多年生草本植物薄荷的茎叶。南北均产，以江苏产者最佳，故有“苏薄荷”之称。
 
-本品辛凉，清轻疏散，芬芳开郁，为手太阴、足厥阴（肺、肝）之药。善解风热之邪，透发斑疹，故常用于风热表证，麻疹初起，疹发不畅通及风疹瘙痒等证。借其轻扬升浮，清利头目的作用，对风热上攻的头痛，目赤，咽堠口齿诸疾均可应用。
+本品辛凉，清轻疏散，芬芳开郁，为手太阴、足厥阴（肺、肝）之药。善解风热之邪，透发斑疹，故常用于风热表证，麻疹初起，疹发不畅通及风疹瘙痒等证。借其轻扬升浮，清利头目的作用，对风热上攻的头痛，目赤，咽喉口齿诸疾均可应用。
 
 此外，本品气味芳香，可疏肝解郁，以治肝郁不舒之证。
 
