--- a/ok/bc/bc01-1.2.1.0.0.md
+++ b/ok/bc/bc01-1.2.1.0.0.md
@@ -11,7 +11,7 @@
 
 此外，本品气味芳香，可疏肝解郁，以治肝郁不舒之证。
 
-【临证应用】薄荷为疏散风热的常用药。外感风热及温病初起，头痛、发热微寒者，多配银花、连翘、荆芥等药，如锒翘散。治咽喉肿痛者，配桔梗、甘草；目赤肿痛配桑叶、菊花等。治小儿惊风，多配僵蚕、钩藤；麻疹透发不畅，则配牛蒡子、蝉衣、荆芥伍用，以助疹之透发。
+【临证应用】薄荷为疏散风热的常用药。外感风热及温病初起，头痛、发热微寒者，多配银花、连翘、荆芥等药，如银翘散。治咽喉肿痛者，配桔梗、甘草；目赤肿痛配桑叶、菊花等。治小儿惊风，多配僵蚕、钩藤；麻疹透发不畅，则配牛蒡子、蝉衣、荆芥伍用，以助疹之透发。
 
 若治肝郁气滞的胸闷，胁肋胀痛，配白芍、柴胡等，如逍遥散。
 
