--- a/ok/gl/gl00.1-0.3.1.1.0.md
+++ b/ok/gl/gl00.1-0.3.1.1.0.md
@@ -8,7 +8,7 @@
 
 2.病理上的整体观
 
-中医学不仅从整体观思想出发去探索人体正常生命活动规律，而且以整体观去认识研究人体疾病的病理机制。由于人体脏腑、组织、器官在生理上的密切联系，必然决定了它们之间在病理变化上的相互影响，即每一脏腑、组织、器官的病变都不是孤立的存在。每一局部的病变部会影响于整体，而整体病变又可反映于某一局部，即某一局部病变可能是整体病变的一部分。这一病理变化上的相互影响，如同生理上的相互联系一样，是通过经络系统、气血津液系统实现的。如某一肌表、经络的病变，可能是与其相关的脏腑病变的反映，或由脏腑病变延及其所属经络、器官。又如肝病可影响于脾、肺，使脾、肺发病。如此等等，都说明了人体疾病病理变化的整体性，同时证明中医学在人体病理变化上的整体观是正确的。
+中医学不仅从整体观思想出发去探索人体正常生命活动规律，而且以整体观去认识研究人体疾病的病理机制。由于人体脏腑、组织、器官在生理上的密切联系，必然决定了它们之间在病理变化上的相互影响，即每一脏腑、组织、器官的病变都不是孤立的存在。每一局部的病变都会影响于整体，而整体病变又可反映于某一局部，即某一局部病变可能是整体病变的一部分。这一病理变化上的相互影响，如同生理上的相互联系一样，是通过经络系统、气血津液系统实现的。如某一肌表、经络的病变，可能是与其相关的脏腑病变的反映，或由脏腑病变延及其所属经络、器官。又如肝病可影响于脾、肺，使脾、肺发病。如此等等，都说明了人体疾病病理变化的整体性，同时证明中医学在人体病理变化上的整体观是正确的。
 
 3.诊法与辨证上的整体观
 
