--- a/ok/bc/bc01-1.2.2.0.0.md
+++ b/ok/bc/bc01-1.2.2.0.0.md
@@ -5,7 +5,7 @@
 
 【讲解】牛蒡子外能疏散风热，内可清泄热毒，为风邪热毒常用之药。为菊科二年生草本植物牛蒡的成熟果实。一名大力子，又名鼠粘子（《本草图经》）、恶实（《别录》）。但临床处方少用。果实（瘦果）呈长扁卵形，外皮灰褐色，种仁灰白色，含丰富油性，生用或微炒，捣碎用。
 
-本品辛苦而寒，辛散苦泄，寒可清热。人肺、胃二经。前人云“诸子皆降，唯牛子独升”，故善能疏散风热，清肺利咽，常用
+本品辛苦而寒，辛散苦泄，寒可清热。入肺、胃二经。前人云“诸子皆降，唯牛子独升”，故善能疏散风热，清肺利咽，常用
 于外感风热所致的喉痒咳嗽，咯痰不爽，及咽喉肿痛等证。本品既能外散风热，并可内泄热毒，透发之中又有清泄之功，故能促使疹子透发，以治麻疹透发不畅及风疹、瘾疹作痒之证。
 
 此外，牛蒡子还能散结消肿，体润滑肠，用于热毒疮肿及大头瘟（头面丹毒），痄腮（腮腺炎）等而大便秘结者最为适宜。
