--- a/ok/bc/bc01-1.2.2.0.0.md
+++ b/ok/bc/bc01-1.2.2.0.0.md
@@ -13,7 +13,7 @@
 牛蒡根，味苦性寒，入肺经。祛风热，消肿毒。治风毒面肿，
 咽喉热肿、痈疽疥疮，咳嗽等证。但临床很少应用。
 
-【临证应用】牛蒡子用于外感风热，喉痒咳嗽、咯痰不爽等证，常与疏散风热药薄荷、荆芥、拮梗、银花、连翹等同用，
+【临证应用】牛蒡子用于外感风热，喉痒咳嗽、咯痰不爽等证，常与疏散风热药薄荷、荆芥、桔梗、银花、连翘等同用，
 如银翘散； 用于咽喉肿痛（如咽炎、上呼吸道炎、扁桃体炎等），
 属于风热者常与薄荷、荆芥等同用；火热毒盛者，可加大黄，共起泻火解毒之能，如牛蒡汤。麻疹初起透出不畅，以及风热发疹、
 荨麻疹等，本品既散又泄，可促使疹子透发，常与薄荷、荆芥、
