--- a/ok/pwl/pwl-5-02.md
+++ b/ok/pwl/pwl-5-02.md
@@ -1,9 +1,83 @@
 # 饮食劳倦所伤始为热中论
 
+古之至人，穷于阴阳之化，究乎生死之际，所著《内外经》，悉言人以胃气为本。盖人受水谷之气以生，所谓清气、荣气、运气、卫气，春升之气，皆胃气之别称也。夫胃为水谷之海，饮食入胃，游溢精气，上输于脾；脾气散精，上归于肺；通调水道，下输膀胱；水精四布，五经并行，合于四时五脏阴阳，揆度以为常也。
 
+若饮食失节，寒温不适，则脾胃乃伤。喜、怒、忧、恐，损耗元气。既脾胃气衰，元气不足，而心火独盛。心火者，阴火也。起于下焦，其系击于心。心不主令，相火代之。相火，下焦胞络之火，元气之贼也。火与元气不两立，一胜则一负。脾胃气虚，则下流，于肾阴火得以乘其土位。
 
-古之至人，穷于阴阳之化，究乎生死之际，所着《内外经》，悉言人以胃气为本。盖人受水谷之气以生，所谓清气、营气、运气、卫气，春升之气，皆胃气之别称也。夫胃为水谷之海，饮食入胃，游溢精气，上输于脾；脾气散精，上归于肺；通调水道，下输膀胱；水精四布，五经并行，合于四时五脏阴阳，揆度以为常也。
+故脾证始得，则气高而喘，身热而烦，其脉洪大而头痛，或渴不止，其皮肤不任风寒，而生寒热。盖阴火上冲，则气高喘而烦热，为头痛，为渴，而脉洪。脾胃之气下流，使谷气不得升浮，是春生之令不行，则无阳以护其荣卫，则不任风寒，乃生寒热，此皆脾胃之气不足所致也。
 
-若饮食失节，寒温不适，则脾胃乃伤。喜、怒、忧、恐，损耗元气。既脾胃气衰，元气不足，而心火独盛。心火者，阴火也。起于下焦，其系系于心。心不主令，相火代之。相火，下焦胞络之火，元气之贼也。火与元气不两立，一胜则一负。脾胃气虚，则下流于肾，阴火得以乘其土位，故脾证始得，则气高而喘，身热而烦，其脉洪大而头痛，或渴不止，其皮肤不任风寒，而生寒热。盖阴火上冲，则气高喘而烦热，为头痛，为渴，而脉洪。脾胃之气下流，使谷气不得升浮，是春生之令不行，则无阳以护其营卫，则不任风寒，乃生寒热，此皆脾胃之气不足所致也。
+然而与外感风寒所得之证，颇同而实异，内伤脾胃，乃伤其气，外感风寒，乃伤其形；伤其外为有余，有余者泻之，伤其内为不足，不足者补之。内伤不足之病，苟误认作外感有余之病，而反泻之，则虚其虚也。实实虚虚，如此死者，医杀之耳！然则奈何？惟当以辛甘温之剂，补其中而升其阳，甘寒以泻其火则愈矣。经曰：劳者温之，损者温之。盖温能除大热，大忌苦寒之药，损其脾胃。脾胃之证，始得则热中，今立治始得之证。
 
-然而与外感风寒所得之证，颇同而实异，内伤脾胃，乃伤其气，外感风寒，乃伤其形；伤其外为有余，有余者泻之，伤其内为不足，不足者补之。内伤不足之病，苟误认作外感有余之病，而反泻之，则虚其虚也。实实虚虚，如此死者，医杀之耳！然则奈何？惟当以辛甘温之剂，补其中而升其阳，甘寒以泻其火则愈矣。经曰∶劳者温之，损者温之。又云∶温能除大热，大忌苦寒之药，损其脾胃。脾胃之证，始得则热中，今立治始得之证。
+**补中益气汤**
+
+黄芪(病甚，劳役热者一钱) 甘草(已上各五分，炙) 人参(去芦，三分，有嗽去之)
+
+已上三味，除湿热、烦热之圣药也。
+
+当归身(三分，酒焙干，或日干，以和血脉) 橘皮(不去白，二分或三分，以导滞气，又能益元气，得诸甘药乃可，若独用泻脾胃) 升麻(二分或三分，引胃气上腾而复其本位，便是行春升之令) 柴胡(二分或三分，引清气，行少阳之气上升) 白术(三分，降胃中热，利腰脐间血)
+
+上件药㕮咀。都作一服，水二盏，煎至一盏，量气弱气盛，临病斟酌水盏大小，去渣，食远，稍热服。如伤之重者，不过二服而愈；若病日久者，以权立加减法治之。
+
+如腹中痛者，加白芍药五分、炙甘草三分。
+
+如恶寒冷痛者，加去皮中桂一分或三分。(桂心是也。)
+
+如恶热喜寒而腹痛者，于已加白芍药二味中更加生黄芩三分或二分。
+
+如夏月腹痛，而不恶热者亦然，治时热也。
+
+如天凉时恶热而痛，于已加白芍药、甘草、黄芩中，更少加桂。
+
+如天寒时腹痛，去芍药，味酸而寒故也，加益智三分或二分，或加半夏五分、生姜三片。
+
+如头痛，加蔓荆子二分或三分。
+
+如痛甚者，加川芎二分。
+
+如顶痛脑痛，加藁本三分或五分。
+
+如苦痛者，加细辛二分，华阴者。
+
+诸头痛者，并用此四味足矣；如头上有热，则此不能治，别以清空膏主之。
+
+如脐下痛者，加真熟地黄五分，其痛立止；如不已者，乃大寒也，更加肉桂，去皮，二分或三分。《内经》所说少腹痛，皆寒证，从复法相报中来也。经云∶大胜必大复，从热病中变而作也，非伤寒厥阴之证也。(仲景以抵当汤并丸主之，乃血结下焦膀胱也。)
+
+如胸中气壅滞，加青皮二分；如气促，少气者，去之。
+
+如身有疼痛者，湿，若身重者，亦湿，加去桂五苓散一钱。
+
+如风湿相搏，一身尽痛，加羌活、防风、藁本根，已上各五分，升麻、苍术，已上各一钱，勿用五苓，所以然者，为风药已能胜湿，故别作一服与之。如病去，勿再服，以诸风之药，损人元气，而益其病故也。
+
+如大便秘涩，加当归梢一钱；闭涩不行者，煎成正药，先用一口，调玄明粉五分或一钱，得行则止，此病不宜下，下之恐变凶证也。
+
+如久病痰嗽者，去人参；初病者，勿去之；冬月或春寒，或秋凉时，各宜加去根节麻黄五分。
+
+如春令大温，只加佛耳草三分，款冬花一分。
+
+如夏月病嗽，加五味子三十二枚，麦门冬去心，二分或三分。
+
+如舌上白滑苔者，是胸中有寒，勿用之。
+
+如夏月不嗽，亦加人参三分或二分，并五味子、麦门冬各等分，救肺受火邪也。
+
+如病患能食而心下痞，加黄连一分或三分。
+
+如不能食，心下痞，勿加黄连。
+
+如胁下痛，或胁下急缩，俱加柴胡三分，甚则五分。
+
+上一方加减，是饮食劳倦，喜怒不节，始病热中，则可用之；若末传为寒中，则不可用也，盖甘酸适足益其病尔，如黄芪、人参、甘草、芍药、五味子之类也。
+
+今详《内经》、《针经》热中寒中之证列于左。
+
+《调经论》云∶血并于阳，气并于阴，乃为炅中。血并于上，气并于下，心烦惋善怒。
+
+又云∶其生于阴者，得之饮食居处，阴阳喜怒。
+
+又云∶有所劳倦，形气衰少，谷气不盛，上焦不行，下脘不通，胃气热，热气熏胸中，故曰内热。阴盛生内寒，厥气上逆，寒气积于胸中而不泻；不泻则温气去，寒独留；寒独留则血凝泣；血凝泣则脉不通，其脉盛大以涩，故曰寒中。
+
+先病热中证者，冲脉之火附二阴之里，传之督脉；督脉者，第二十一椎下长强穴是也。与足太阳膀胱寒气为附经。督脉，其盛也，如巨川之水，疾如奔马，其势不可遏。太阳寒气，细细如线，逆太阳寒气上行，冲顶入额，下鼻尖，入手太阳于胸中，手太阳者，丙，热气也；足膀胱者，壬，寒气也。壬能克丙，寒热逆于胸中，故脉盛大。其手太阳小肠热气不能交入膀胱经者，故十一经之盛气积于胸中，故其脉盛大。其膀胱逆行，盛之极，子能令母实，手阳明大肠经，金，即其母也，故燥旺，其燥气挟子之势，故脉涩而大便不通。以此言脉盛大以涩者，手阳明大肠脉也。
+
+《黄帝针经》∶胃病者，腹䐜胀，胃脘当心而痛，上支两胁，膈咽不通，饮食不下，取三里以补之。
+
+若见此病中一证，皆大寒，禁用诸甘酸药，上已明之矣。
