--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -66,7 +66,7 @@
 
 ## 四、《伤寒论》对祖国医学的主要贡献
 
-《伤寒论》与《金匱要略》被后世视为医籍之经典、医家之圭臬。就《伤寒论》而言，它对祖国医学的贡献是多方面的，其中主要是六经辨证方法和方剂学成就两个方面。
+《伤寒论》与《金匮要略》被后世视为医籍之经典、医家之圭臬。就《伤寒论》而言，它对祖国医学的贡献是多方面的，其中主要是六经辨证方法和方剂学成就两个方面。
 
 ### （一）关于六经辨证
 
