--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -182,15 +182,13 @@ end
 
 西医疗法往往要求量化、可重复，即所谓的科学方法。而中医的神、元气、气态物质等指标难以量化，所以难以纳入现代医疗体系。
 
-人体是一个非常复杂的系统，西医在对某一局部位置、局部指标进行精确干预的时候，往往无法判断这种干预对系统其它部位功能的影响是好还是坏，所获得的好处与副作用难以比较大小，不知道是“得大于失”还是“得不偿失”。而中医在中医理论的指导下，对人体疾病的轻浅与深重有独特的判断方法，所以虽然模糊，但是却能总体把握疾病的走向。钱学森先生作为“中国航天之父”，就是认识到人体属于复杂巨系统，应充分考虑人体不同系统之间的相互影响，使用系统论的方法进行研究。因为中医的理论包含了很多系统论的思想，所以钱先生认为中医才是医学的发展方向。
+人体是一个非常复杂的系统。钱学森先生作为“中国航天之父”，认为“人体属于复杂巨系统，医学应非常重视人体不同部位之间的相互影响，适合使用系统论的方法进行研究”。西医在对某一局部位置、局部指标进行精确干预的时候，往往无法判断这种干预对系统其它部位功能的影响是好还是坏，即难以比较所获得的好处与副作用孰大孰小，不知是“得大于失”还是“得不偿失”。而中医在中医理论的指导下，对人体疾病的轻浅与深重有独特的判断方法，虽然模糊，但却能总体把握疾病的走向。所以钱先生认为中医的理论包含了很多系统论的思想，是未来医学的发展方向。
 
-比如西医多使用验血的方法了解疾病的轻重。血液指标确实可以在一定程度上代表疾病的轻重。但是在某种情况下又并非如此。比如肝肾疾病，中医调理的初期可能有某些血液指标升高的情况。这是因为血液作为一种载体，承担着运载肝肾废物排出的功能。肝肾功能好转过程中，会排出更多废物到血液中。此时化验血液，就会出现指标升高的现象。这种情况要等到肝肾功能完全好转，废物全部排出，血液指标才会恢复到正常值。
+比如西医的很多治疗方法是调节血液指标，缺钾补钾，缺钠补钠，尽量满足血液指标的平衡。中医则通过四诊的方法，按照中医疾病轻重进退的理论，评估西医治疗的优劣。西医治疗后，若从四诊上看有好转，中医可能会认同，若四诊判断没有好转，甚至加重，中医则反对。实际上很多中医反对西医的原因，并非是反对某一具体疗法，而是发现很多病人经过西医的治疗，原本是正气足、抗邪有力的情况，治疗后转变成正气虚、无力抗邪的情况，也即从阳证转为阴证，从疾病轻浅变为深重。其背后的本质含义是西医在调解某些指标平衡时，伤害了中医认为更重要的精、气、神等指标。
 
-那么如果出现血液指标升高，如何判断疾病是减轻还是加重呢？中医是通过人的面色、舌像、脉像、饮食、睡眠、精神、体力等方面来判断，也即是常说的望闻问切四诊。常有病人同时选择中西医治疗，当遇到两者指标冲突的时候，若不理解中医的道理，可能就放弃了中医的治疗。
+另外，西医多使用验血的方法了解疾病的轻重。血液指标确实可以在一定程度上代表疾病的轻重。但是在某种情况下又并非如此。比如肝肾疾病，中医调理的初期可能有某些血液指标升高的情况。这是因为血液作为一种载体，承担着运载肝肾废物排出的功能。肝肾功能好转过程中，会排出更多废物到血液中。此时化验血液，就会出现指标升高的现象。这种情况要等到肝肾功能完全好转，废物全部排出，血液指标才会恢复到正常值。这就是中西医指标的矛盾之处。常有病人同时选择中西医治疗，当遇到两者指标冲突的时候，若不理解中医的道理，可能就放弃了中医的治疗。
 
-西医的很多治疗方法是调节血液指标，缺钾补钾，缺钠补钠，尽量满足血液指标的平衡。中医则通过四诊的方法，按照中医疾病轻重进退的理论，评估西医治疗的优劣。西医治疗后，若从四诊上看有好转，中医可能会认同，若四诊判断没有好转，甚至加重，中医则反对。实际上很多中医反对西医的原因，并非是反对某一具体疗法，而是发现很多病人经过西医的治疗，原本是正气足、抗邪有力的情况，治疗后转变成正气虚、无力抗邪的情况，也即从阳证转为阴证，从疾病轻浅变为深重。
-
-由此可见，学习中医，一是要理解中医疾病轻重进退的道理，二是要对中医的四诊非常熟悉，如此才能对疾病的病位深浅、虚实性质、程度轻重、变化进退有理有据。至于治疗之法，反而多种多样，针砭灸药看情况选择即可
+学习中医，一要理解疾病轻重进退的道理，如此养生、治病才有方向。二是要对中医的四诊非常熟悉，如此才能对疾病的病位深浅、虚实性质、程度轻重、变化进退有理有据。至于治疗之法，反而多种多样，针砭灸药看情况选择即可
 
 总体来说，从中医角度看待西医疗法，大多属于治标之法。“急则治其标，缓则治其本”，遇到紧急情况，在没有更好办法的时候选择西医方法救急是可以的。因为此时若不缓解症状，可能有生命危险，所以即便疗法有副作用，也无暇顾及。但最好是熟悉中医诊疗理论，一方面提前发现问题，尽量不要让身体出现紧急情况。另一方面，万一出现紧急问题，能用中医方法解决。李可老中医被称为“中医ICU”，说明中医在急救方面也有独到方法。或者即便紧急情况用到西医急救，待情况缓解后，也应以中医治本方法调理。中医学的好就会明白，方法手段只是工具而已，中医理论才是根本，在中医理论指导下，西医的疗法未必不可以成为中医的工具，只看能否将其用在合适的时机。
 
