--- a/ok/gl/gl05-0.3.1.0.0.md
+++ b/ok/gl/gl05-0.3.1.0.0.md
@@ -6,7 +6,7 @@
 
 年龄。有些疾病具有年龄特点，某些只见于或多见于小儿，而不见或少见于成年人。
 
-职业。职业和工作环境的不同，对疾病发生有一定影响。职业和疾病的关系，除有职业病外，由于职业不同，带来了工作环境上的不同，对人体产生不同的影响。如渔民、矿工等，长期在潮湿环境工作，易感受寒湿邪气。另外，体力劳动者和脑力劳动者，在体质上有一定差异，而患病之后病证虚实趋向也有一定差别。如体力劳动者，其病多实；脑力劳动者，其病多虚。又如某些难产多见于静坐性（脑力）工作者，而少见体体力劳动者。中医认为体力劳动者，气血多流畅；静坐性工作者，气血易郁滞。所以二者在难产发生率上有区别。
+职业。职业和工作环境的不同，对疾病发生有一定影响。职业和疾病的关系，除有职业病外，由于职业不同，带来了工作环境上的不同，对人体产生不同的影响。如渔民、矿工等，长期在潮湿环境工作，易感受寒湿邪气。另外，体力劳动者和脑力劳动者，在体质上有一定差异，而患病之后病证虚实趋向也有一定差别。如体力劳动者，其病多实；脑力劳动者，其病多虚。又如某些难产多见于静坐性（脑力）工作者，而少见于体力劳动者。中医认为体力劳动者，气血多流畅；静坐性工作者，气血易郁滞。所以二者在难产发生率上有区别。
 
 其他，如籍贯、生活习惯等都与某些疾病发生有一定关系。《素问•异法方宜论》指出：“东方之域”，“鱼盐之地，海滨傍水，其民食鱼而嗜咸"，“鱼者使人热中，盐者胜血”，“其病皆为痈疡”；“西方者，金玉之域，沙石之处”，“其民华食而脂肥，故邪不能伤其形体，其病生于内”；“北方者”，“其民乐野处而乳食，脏寒生满病”；“南方者”，“其地下，水土弱，雾露之所聚也，其民嗜酸而食胕”，“其病挛痹”；“中央者，其地平以湿”，“其民食杂而不劳，故其病多痿厥寒热”。这里讲的就是居住地的地理气候条件不同，饮食生活习惯不同，对疾病的发生所产生的影响。
 
