--- a/ok/gl/gl01-0.2.1.2.0.md
+++ b/ok/gl/gl01-0.2.1.2.0.md
@@ -20,7 +20,7 @@
 
 相侮，即是反克，又称反侮，是五行中某一行过亢，从而对原来“克我”者产生的反方向的对抗制约的过程。这种偏亢，或为绝对偏亢，或因另一方的虚衰而相对偏亢。如：水克火，但当火过亢，超过了水对火的制约能力时，水不仅失去对火的制约，反而出现火对水的反方向的对抗和制约，这就是反侮（反克），称为“火侮水”或“火盛侮水”。至于因水之偏衰，使火相对偏亢，致使火来侮水，则称为“水虚火侮”。
 
-相乘与相侮在五行运动的异常变化中，常常是同时出现。在五行出现相乘情况时，盛者即可反侮于“克己”者。如木盛乘土，土气必衰，土衰不能生金，则金衰，金衰不能制木，一方面致使木气更盛，另一方面亢盛之木即可反侮于金（木乘土侮金）。在五行出现相侮时也一样，盛者即可乘己之所胜（我克者）。火盛侮水，水不制火，则火无所制，必乘己之所胜者一金（火侮水乘金）。因此，相乘相侮是密切相关的。《素问·五运行大论》对此做了明确地阐述：“气有余，则制已所胜，而侮所不胜；其不及，则已所不胜，侮而乘之，已所胜，轻而侮之”。
+相乘与相侮在五行运动的异常变化中，常常是同时出现。在五行出现相乘情况时，盛者即可反侮于“克己”者。如木盛乘土，土气必衰，土衰不能生金，则金衰，金衰不能制木，一方面致使木气更盛，另一方面亢盛之木即可反侮于金（木乘土侮金）。在五行出现相侮时也一样，盛者即可乘己之所胜（我克者）。火盛侮水，水不制火，则火无所制，必乘己之所胜者一金（火侮水乘金）。因此，相乘相侮是密切相关的。《素问·五运行大论》对此做了明确地阐述：“气有余，则制己所胜，而侮所不胜；其不及，则己所不胜，侮而乘之，己所胜，轻而侮之”。
 
 五行胜复。胜、复又称胜气、复气。胜复实质就是亢与制，但其中包含着两个制约的过程。胜是五行运动的异常变化，而复则是五行自身对异常变化的自我调节（制其胜），以达到五行的总体平衡，如朱震亨所说：“气之来也，既以极而成灾，则气之乘也，必也复而得平”（《丹溪心法·亢则害承乃制》）。对胜复，张景岳解释说：“彼来胜我，故子必起而报之，故谓之复”“因胜而报者谓之复，胜复相仍，本无罅隙”（《类经·运气》）。因为“凡有所胜，必有所败，有所败，必有所复，母之败也，子必救之”（《类经图翼·运气上》）。如水太过，则必乘（胜）于所克之火，使火衰弱，而火之子土，即起来对水加以制约。其中土（子）制水的过程就是复。所以张景岳说：“復者，报复之义”（《类经·运气》），即“子报母仇”。从中可以看出，胜复包含着两个制约的过程，一个是“彼来胜我”，一个是“子必起而报之”。
 
