--- a/ok/gl/gl01-0.2.1.2.0.md
+++ b/ok/gl/gl01-0.2.1.2.0.md
@@ -28,7 +28,7 @@
 
 ##### 3.五行的本化与兼化
 
-五行的本化，是指五行中每一行自身基本属性所应出现的征象，为其本身所固有的表象。如，动摇不定即是木的变化。又如，湿盛身体重着不移，臃肿胀满为土的变化，等等。而兼化是指五行中出现二行以上的气化表现称为兼化。如高热（火）病人，同时出现恶寒战慄（水）之象，即为兼化。刘完素说：“所谓五行之理，过极则胜已者反来制之。故火热过极，则反兼于水化”（《素问玄机原病式·五运主病》）。刘氏又说：“夫五行之理，微则当其本化，甚则兼有鬼贼”（《素问玄机原病式·六气为病》）。总之，五行之理，亢而不极则表现为本化，亢极则出现兼化。简言之：微者本化，甚者兼化。
+五行的本化，是指五行中每一行自身基本属性所应出现的征象，为其本身所固有的表象。如，动摇不定即是木的变化。又如，湿盛身体重着不移，臃肿胀满为土的变化，等等。而兼化是指五行中出现二行以上的气化表现称为兼化。如高热（火）病人，同时出现恶寒战慄（水）之象，即为兼化。刘完素说：“所谓五行之理，过极则胜己者反来制之。故火热过极，则反兼于水化”（《素问玄机原病式·五运主病》）。刘氏又说：“夫五行之理，微则当其本化，甚则兼有鬼贼”（《素问玄机原病式·六气为病》）。总之，五行之理，亢而不极则表现为本化，亢极则出现兼化。简言之：微者本化，甚者兼化。
 
 兼化的出现，大致有两种情形：①兼其相生者即同气之化；②兼其相克者即异气之化。如：热（火）极生风（木），即是火极而兼木化。又如“诸热瞀瘈，……疼痠……”（《素问玄机原病式·六气为病》），“诸热瞀瘈”为火病，而疼痠为木病，木即为兼化，此由于火亢极则制金，金衰则不能制木，致使木旺而为兼化（火与木为相生关系）。火极似水，以及木极似金，金极似火等，即属“己亢过极，则反似胜己之化”（《素问玄机原病式·自序》），属相克及异气兼化。火极兼木化，则属于相生及同气兼化。一般说，同气兼化多见，异气兼化少见，二者有着本质区别，即异气兼化中之兼化征象均为假象，如水极似火，则火为假象，实非真火；而同气兼化则本化与兼化，实为两行本化相兼，如木、火多兼化，水、土多兼化。以五行化生之六气言，则风、火、暑、燥（温）多兼化，寒湿多兼化。
 
