--- a/ok/bc/bc01-1.2.3.0.0.md
+++ b/ok/bc/bc01-1.2.3.0.0.md
@@ -18,7 +18,7 @@
 故应改为人肺、肝二经。
 
 【临证应用】桑叶轻清凉散，善能清疏上焦风热，以治外感风热，或温病初起，发热头痛，咳嗽等证，常与菊花、薄荷、
-连翘、拮梗等同用，如桑菊饮；蜜炙桑叶有润肺之功，对于燥热伤肺，干咳痰稠，鼻咽干燥之证效果更好，常与杏仁、沙参、贝母及麦冬、石膏等配伍，益增清肺热、润肺燥之功，如桑杏汤、
+连翘、桔梗等同用，如桑菊饮；蜜炙桑叶有润肺之功，对于燥热伤肺，干咳痰稠，鼻咽干燥之证效果更好，常与杏仁、沙参、贝母及麦冬、石膏等配伍，益增清肺热、润肺燥之功，如桑杏汤、
 清燥救肺汤。配伍菊花、决明子、车前子内服，或煎汤外洗，可清肝明目，治肝经实热或风热所致目赤涩痛、多泪之证。若同黑芝麻配伍，作蜜丸服，如桑麻丸，可治肝阴不足，目暗昏花。本
 品略有凉血止血作用，单用或入复方，可用于血热吐血之轻证。
 
