--- a/ok/bc/bc01-1.2.4.0.0.md
+++ b/ok/bc/bc01-1.2.4.0.0.md
@@ -17,7 +17,7 @@
 眩晕等证，与白芍、钩藤，石决明等配伍，则益增平肝息风之功。
 尚可晒干作枕用。
 
-【用量用法】10~15克。煎服或人丸散。外用适量。或晒干填枕用。
+【用量用法】10~15克。煎服或入丸散。外用适量。或晒干填枕用。
 
 **附：野菊花** 味苦且辛，性寒。以清热解毒为主要功效，故多用于疮痈。内服配蒲公英、金银花、紫花地丁等则清热解毒之力更增，如五味消毒饮。亦可捣汁内服或打烂外敷。
 
