--- a/ok/bc/bc01-1.2.5.0.0.md
+++ b/ok/bc/bc01-1.2.5.0.0.md
@@ -1,11 +1,11 @@
 ### 蝉 蜕
 
 〔原文〕蝉乃土木余气所化，饮风露而不食。
-其气清虚而味甘寒，故除风热；其体轻浮，故发痘疹；其性善蛻，故退目翳，催生下胞；其蛻为壳，故治皮肤疮疡瘾疹；<small>与薄荷等分为末，酒调服</small>。其声清响，
+其气清虚而味甘寒，故除风热；其体轻浮，故发痘疹；其性善蜕，故退目翳，催生下胞；其蜕为壳，故治皮肤疮疡瘾疹；<small>与薄荷等分为末，酒调服</small>。其声清响，
 故治中风失音。又昼鸣夜息，故止小儿夜啼。蝉类甚多，惟大而色黑者入药。洗去泥土翅足，浆水煮，
 晒干用。 <small>攻毒全用</small>。
 蚱蝉，治小儿惊痫夜啼，杀疳去热，出胎下胞。
-<small>时珍曰:治皮肤疮疡风热当用蝉蜕，治脏腑经络，当用蝉身，各从其类
+<small>时珍曰：治皮肤疮疡风热当用蝉蜕，治脏腑经络，当用蝉身，各从其类
 也。</small>
 
 **【讲解】 蝉蜕长于疏散风热透疹，并能明目止痉，为清疏肺肝之品。**为蝉科昆虫黑蚱羽化后的蛻壳。拣去杂质，洗净晒干用。现均不去翅足，也不用浆煮。
