--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -14,7 +14,7 @@
 
 **客**  去来不定。    **长夏**  zhǎng，读涨。滋生发育叫做长。
 
-主色，就是五脏原来的正色（又叫脏色），人的形质不同（即所谓五形之人），其主色也不同。如火形之人，面色一般是微红而鲜明，木形之人，面色一般微青而光润等。但不论何形之人，都以黄色正色，即黄中带红，黄中带青而巳。人与自然有着密切关系。不同时令应应该具有不同的面色，这就是客色（又叫时色）。客色来去不定是随着四时气候变化而变化的。因为，春气通于肝，肝主藏（回）血，其色当青；夏气通于心，心主发血，其色当赤；秋气通于肺，肺主洁血，其色当白，冬气通于肾，肾主滤血，其迹当黑；长夏四季之气通于脾，脾主生（统）血，其色当黄。这是四时常色。主色是人之脏气所生，客色是岁气（岁时之气)影响人体的变化，所以岁时不同，人的脏气应该随着时令发生一定的感应和变化。人适应自然变化的客观反映是正常现象。因此“客胜主善”，就是说明岁时之气胜人的主气是顺的。否则，人的主气胜岁时之气为逆，即春时当青反白，夏时当赤反黑……。因此说“主胜客恶”。必须注意：主色、客色都属于正常的颜色，不是病色。
+主色，就是五脏原来的正色（又叫脏色），人的形质不同（即所谓五形之人），其主色也不同。如火形之人，面色一般是微红而鲜明，木形之人，面色一般微青而光润等。但不论何形之人，都以黄色正色，即黄中带红，黄中带青而巳。人与自然有着密切关系。不同时令应该具有不同的面色，这就是客色（又叫时色）。客色来去不定是随着四时气候变化而变化的。因为，春气通于肝，肝主藏（回）血，其色当青；夏气通于心，心主发血，其色当赤；秋气通于肺，肺主洁血，其色当白，冬气通于肾，肾主滤血，其迹当黑；长夏四季之气通于脾，脾主生（统）血，其色当黄。这是四时常色。主色是人之脏气所生，客色是岁气（岁时之气)影响人体的变化，所以岁时不同，人的脏气应该随着时令发生一定的感应和变化。人适应自然变化的客观反映是正常现象。因此“客胜主善”，就是说明岁时之气胜人的主气是顺的。否则，人的主气胜岁时之气为逆，即春时当青反白，夏时当赤反黑……。因此说“主胜客恶”。必须注意：主色、客色都属于正常的颜色，不是病色。
 
 **3.色见皮外，气含皮中。内光外泽，气色相融。**
 
@@ -24,7 +24,7 @@
 
 青、黄、赤、白、黑，显然彰于皮之外者为五色，隐然含于皮之中者为五气。内充外泽，则气色并至，才是无病的征象。若五色显露于外，而没有五气的隐含充实于皮内，则为有色无气，是病色虽自身感觉无病也是生命倾危之象。《内经》说：“色至气不至者死”。所以说“有色无气，不病命倾”。若面色虽然浅淡不泽，但神气生动内外条达，则为有气无色，不是凶险之象。《内经》说“气至色不至曰生”。所以说“有气无色，虽困不凶”。
 
-按“得神者昌，失神者亡”。若是神采奕奕，目光灵敏，神态自然，言语清楚，即便色脉不太正常，也无大凶大险；否则，即使色脉未见多大的异样，而神滞情迷，脏色外露，则部属于病重危象。
+按“得神者昌，失神者亡”。若是神采奕奕，目光灵敏，神态自然，言语清楚，即便色脉不太正常，也无大凶大险；否则，即使色脉未见多大的异样，而神滞情迷，脏色外露，则都属于病重危象。
 
 **4.缟裹雄黄，脾状并臻。缟裹红肺，缟裹朱心。**
 
@@ -32,7 +32,7 @@
 
 **缟**  gǎo，读稿，古代的一种白色罗绢。  **臻**  zhēn，读珍，到达。  **石青**  碧玉
 
-五脏反映在颜面上的色泽，应该是色气并至的，得神的。如白罗裹雄黄，映出白中透黄之色，是脾之气色并至的容状。如白罗裹浅红罩白之色，是肺之气色并至的容状。如白罗裹朱砂，深红正亦之色，是心之气色并至的容状。如白罗裹黑赤，映出黑中透赤，紫艳之色，是肾之气色并至的容状。如白罗裹兰赤，映出兰中扬红，石青之色，是肝之气色并至的容状。这里应当注意的是，文中所举的缟和雄黄、朱砂等，都是用以比喻色泽的。临床上所见的容颜色泽，绝不是和这些实物一模一样，只有在实践中乡观察，多揣摩，多比较，才能逐渐领会其含义。
+五脏反映在颜面上的色泽，应该是色气并至的，得神的。如白罗裹雄黄，映出白中透黄之色，是脾之气色并至的容状。如白罗裹浅红罩白之色，是肺之气色并至的容状。如白罗裹朱砂，深红正亦之色，是心之气色并至的容状。如白罗裹黑赤，映出黑中透赤，紫艳之色，是肾之气色并至的容状。如白罗裹兰赤，映出兰中扬红，石青之色，是肝之气色并至的容状。这里应当注意的是，文中所举的缟和雄黄、朱砂等，都是用以比喻色泽的。临床上所见的容颜色泽，绝不是和这些实物一模一样，只有在实践中多观察，多揣摩，多比较，才能逐渐领会其含义。
 
 **5.青如苍壁，不欲如蓝。赤白裹朱，衃赭死原。**
 
@@ -42,27 +42,27 @@
 
 此说明四时百病，五脏、五部、五官、五色生死的诊法。
 
-《内经》说：“青欲如苍壁之泽”。即青石色，有生气的青色。“不欲如蓝”，即靛叶色，没有生气的青色。衃血，即凝集的血，赭，即代赭石，《内经》说：“赤欲如白裹朱”，即正赤色，有生气的红色。“不欲如赭”，即赭石之色，没有生气的红色。重漆，光润的紫檀色。炲，煤黑色，即地上苍枯的黑土。《内经》说：“黑欲如重漆”，即有生气的黑色。“不欲如炲”，即没有生气的黑色。白羽，白有光泽，枯，枯骨，盐，食盐，均无光泽。《内经》说：“白欲如鹅羽”，即有生气的白色。“不欲如盐”，即枯骨、食盐之色，没有生气的白色。《内经》说：“黄欲如罗裹雄黄”，即黄中透红之色，有生气的黄色。“不欲如黄土”，即沉滞无神，干枯的黄土色。各种疾病见到恶色，一般是凶险的。五脏虽病，但是胃气尚存，那么反映出来的五色也就鲜明、润泽，各种疾病见到这种善色，一般是良好的观象。
+《内经》说：“青欲如苍壁之泽”。即青石色，有生气的青色。“不欲如蓝”，即靛叶色，没有生气的青色。衃血，即凝集的血，赭，即代赭石，《内经》说：“赤欲如白裹朱”，即正赤色，有生气的红色。“不欲如赭”，即赭石之色，没有生气的红色。重漆，光润的紫檀色。炲，煤黑色，即地上苍枯的黑土。《内经》说：“黑欲如重漆”，即有生气的黑色。“不欲如炲”，即没有生气的黑色。白羽，白有光泽，枯，枯骨，盐，食盐，均无光泽。《内经》说：“白欲如鹅羽”，即有生气的白色。“不欲如盐”，即枯骨、食盐之色，没有生气的白色。《内经》说：“黄欲如罗裹雄黄”，即黄中透红之色，有生气的黄色。“不欲如黄土”，即沉滞无神，干枯的黄土色。各种疾病见到恶色，一般是凶险的。五脏虽病，但是胃气尚存，那么反映出来的五色也就鲜明、润泽，各种疾病见到这种善色，一般是良好的现象。
 
 以上5条，概述了四时、五脏应见的正常面色和不应见的反常面色，从而观察疾病的轻重，顺逆，以预测其生死安危。
 
-**6.天庭面首，阙上喉咽。阙中印堂，侯肺之原。**
+**6.天庭面首，阙上喉咽。阙中印堂，候肺之原。**
 
-**山根侯心，年寿候肝。两旁候胆，脾胃鼻端。**
+**山根候心，年寿候肝。两旁候胆，脾胃鼻端。**
 
 **颊肾腰脐，颧下大肠。颧内小府，面王子膀。**
 
-**当颧侯肩，颧外候臂。颧外之下，乃侯手位。**
+**当颧候肩，颧外候臂。颧外之下，乃候手位。**
 
 **根傍乳膺，绳上候背。牙车下股，膝胫足位。**
 
 **阙**  quē，读缺，即眉心。 **颊**  jiá，读夹，脸的两侧从眼到下颔的部分。    **颧**  quán，读权，即眼下，两腮上突出的颜面骨。    **膺**  yīng，读英，胸前两旁隆起的部位。
 
-两眉之间，名为印堂，又称阙中，在面部中间的最高之处，是相关肺病的部位；印堂的上面，名为阙上，阙上到头发边缘，名为天庭，天庭处在整个面部最高最上的地方，是相关头面疾病的部位；阙上处在天庭和印堂之中，所以是相关头面及咽喉疾病的部位，印堂略向下，在两眼之间，名为山根，又称下极，是相关心病的部位；年寿即鼻梁两旁，由于胆附于肝，故是相关胆病的部位；年寿下面是鼻的尖端，称为为准头，是相关脾病的部位，准头两侧鼻孔之上，名为方上，由于脾胃相连，是相关胃病的部位；两耳前方偏下的两颊，是相关两肾的部位，由于两肾位局背脊之处，与腰肚脐相对，所以又相关腰脐的疾病，颊内颧骨下面，是相关大肠疾病的部位；颧骨内侧，是相关小肠疾病的部位。从鼻端的准头上到天庭，这一部位，统称为明堂，从准头下至颏，称为面王，面王包括人中、承浆的部位，是相关子处（即精室，血海）和膀胱疾病的部位。
+两眉之间，名为印堂，又称阙中，在面部中间的最高之处，是相关肺病的部位；印堂的上面，名为阙上，阙上到头发边缘，名为天庭，天庭处在整个面部最高最上的地方，是相关头面疾病的部位；阙上处在天庭和印堂之中，所以是相关头面及咽喉疾病的部位，印堂略向下，在两眼之间，名为山根，又称下极，是相关心病的部位；年寿即鼻梁两旁，由于胆附于肝，故是相关胆病的部位；年寿下面是鼻的尖端，称为准头，是相关脾病的部位，准头两侧鼻孔之上，名为方上，由于脾胃相连，是相关胃病的部位；两耳前方偏下的两颊，是相关两肾的部位，由于两肾位居背脊之处，与腰肚脐相对，所以又相关腰脐的疾病，颊内颧骨下面，是相关大肠疾病的部位；颧骨内侧，是相关小肠疾病的部位。从鼻端的准头上到天庭，这一部位，统称为明堂，从准头下至颏，称为面王，面王包括人中、承浆的部位，是相关子处（即精室，血海）和膀胱疾病的部位。
 
 面部不仅主要反映体内各脏腑疾病在面部相应的有关部位，而且也反映肩、臂、手、膺、股等部位的疾病。根傍，相当于两眼内眼角的地方，是相关前胸乳部疾病的部位；绳骨相当额部两侧的转角处，是相关背疾的部位；牙车骨，相当颊骨下方，是相关下肢、股、膝、胫、脚疾病的部位。
 
-面部各相关部位，以额部主头面；五脏除肾外，肺心、肝、脾挨次向下排列在中央；六腑则排列在两侧；肢节又居于六腑之外。某处色泽有了异常，就可以推测到相应的各种病变。（附图）
+面部各相关部位，以额部主头面；五脏除肾外，肺、心、肝、脾挨次向下排列在中央；六腑则排列在两侧；肢节又居于六腑之外。某处色泽有了异常，就可以推测到相应的各种病变。（附图）
 
 <img src="img\0.jpeg"  />
 
@@ -135,7 +135,7 @@
 
 疹 zhěn  读诊，皮肤丘疹。    疡  yàng，读阳，疮疖。
 
-颜面和两眼，各有其相宜的色泽。如面之色：肝青、心赤、脾炎、肺白、肾黑。如日之色泽；瞳人应是黑色，乌珠（黑晴）应是微黑透青，白睛应是白色，内外两眼角应见微红色。假如眼睛的颜色有异常的变化，而颜面也失掉了正常色泽，这叫做交互错见，都是疾病严重的反映。《素问·五脏生成篇》说：“面黄目青，面黄目白，面黄目黑，皆不死也，如而青目赤，而赤目白，面青目黑，面黑目白，面赤目青，皆死也”。惟面色黄者，为脾土未败，五行有救，皆不死也。若伤寒（指恶寒发热的表证）两眦皆红，则为发疹疡之兆，两眦皆黄，则为病将愈之征。若两睛通黄，是湿热内盛，为发黄疸之候。
+颜面和两眼，各有其相宜的色泽。如面之色：肝青、心赤、脾炎、肺白、肾黑。如日之色泽；瞳人应是黑色，乌珠（黑晴）应是微黑透青，白睛应是白色，内外两眼角应见微红色。假如眼睛的颜色有异常的变化，而颜面也失掉了正常色泽，这叫做交互错见，都是疾病严重的反映。《素问·五脏生成篇》说：“面黄目青，面黄目白，面黄目黑，皆不死也，如面青目赤，面赤目白，面青目黑，面黑目白，面赤目青，皆死也”。惟面色黄者，为脾土未败，五行有救，皆不死也。若伤寒（指恶寒发热的表证）两眦皆红，则为发疹疡之兆，两眦皆黄，则为病将愈之征。若两睛通黄，是湿热内盛，为发黄疸之候。
 
 **15.闭目阴病，开目病阳。朦胧热盛，时瞑衄常。**
 
@@ -155,7 +155,7 @@
 
 怒者肝之情志，故病则好怒。青色者，肝之色，故病则面色当青，肝之部位在左，故病则左胁有动气而胁疼。肝主筋，故病则转筋，掉者，动摇抽搐。眩者，眼昏黑不明。肝主风，故病则掉眩。疝病属肝，故病疝气。肝与胆为表里（足少阳胆经入耳），故病耳聋，此皆肝实之病。若肝虚，则目视𥆨𥆨无所见，因肝开窍于目，肝虚则胆弱，故不时似有人将捕之，而惊悸不定。
 
-人体解剖部位，肝是处在上腹部的右方，但《内经》里有“肝左肺右”的说法。这其实前者是指肝的实体，后者是指肝的功能气化。即肝的实体居于右，肝的气化局于左，所以肝脉亦见于左关。古代医生从经验中体会到肝病患者左边行“动气”（即有一种跳动的感觉）。
+人体解剖部位，肝是处在上腹部的右方，但《内经》里有“肝左肺右”的说法。这其实前者是指肝的实体，后者是指肝的功能气化。即肝的实体居于右，肝的气化居于左，所以肝脉亦见于左关。古代医生从经验中体会到肝病患者左边行“动气”（即有一种跳动的感觉）。
 
 **17.心赤善喜，舌红口干。脐上动气，心胸痛烦。**
 
