--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -298,7 +298,7 @@
 
 比如病人本有里部五脏虚弱，又复有外感，如果只看到外感，未能发现里虚，只用了治疗外感的方药。治疗外感的方药往往要调动里部气血走向表部，这样会造成里部虚上加虚，就犯了虚虚之戒，形成严重的里部失衡，有可能给病人造成严重伤害。系统学习中医的意义就是能够全面的看待人体，避免出现这种因医误病的情况。
 
-为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat) 。
+为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索到教材的相关论述。链接地址为：[https://gmzyjx.com/showcat](https://gmzyjx.com/showcat) 。
 
 光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结，所以大家必须认真学习教材。
 
