update ok/qs/qs01_01.md. 原文 名日虚里 改为 名曰虚里
回家的路

--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -219,13 +219,13 @@
 
 《内经》说：“夫五藏者，身之强也(五脏为人身之根本，根本巩固，则身体强健）。头者精明之府，头倾视深（头倾斜而目陷无光），精神将夺矣。背者，胸中之府（五脏的俞穴皆在背），背曲肩随，府将坏矣。腰者肾之府，若腰痛而转摇艰难，肾将惫矣。膝者，筋之府，屈伸不能，行则偻俯，筋将惫矣。骨者，髓之府，不能久立，行则振掉，骨将惫矣。凡此形神将夺，筋骨虺颓之形状，故皆主死候也”  （均见《素问·脉要精微论》）
 
-**25.胃之大络，名日虚里。动左乳下，有过不及。**
+**25.胃之大络，名曰虚里。动左乳下，有过不及。**
 
 **其动应衣，宗气外泄。促结积聚，不至则死。**
 
 **宗气**  也称大气，积于胸中，也就是维持生命的元气。**促**  脉象名称，“数时一止名为促”。**结**  脉象名称，缓止须将结脉呼”。
 
-胃之大络，名日虚里（在胸部左乳下第四、五肋的部位），贯膈络肺，出于左乳之下，这个脉络的搏动，正常情况下是动不应衣的，因以候宗气的强弱。若动之微而不见，则为不及，主宗气内虚。若动之应衣而甚，则为太过，主宗气外泄。若三、四至一止（结），或五、六至一止（促），则主有积聚。若绝不至者，则主死。因为虚里内面正是心脏，故探索虚里的搏动情况，审诊疾病的变化，前人颇为重视。
+胃之大络，名曰虚里（在胸部左乳下第四、五肋的部位），贯膈络肺，出于左乳之下，这个脉络的搏动，正常情况下是动不应衣的，因以候宗气的强弱。若动之微而不见，则为不及，主宗气内虚。若动之应衣而甚，则为太过，主宗气外泄。若三、四至一止（结），或五、六至一止（促），则主有积聚。若绝不至者，则主死。因为虚里内面正是心脏，故探索虚里的搏动情况，审诊疾病的变化，前人颇为重视。
 
 以上25条摘自《医宗金鉴·四诊心法要诀》概述了望面色、望神气，望身形等法。五色之诊首贵内含神气。故前哲于望诊之中一则曰“神色”，再则曰“气色”，神色者内含光采，气色者内蕴精华。观察形体病态，可知内脏的坚脆，气血的盛衰，邪正的消长。观察动静姿态，可以根据“阴主静，阳主动”的理论来认识面色、神气、形体，这对疾病的预后有密切关系，但望诊不是绝对可据的，还要四诊合参。
 
