update ok/qs/qs01_01.md. 腻于正气啦的肺病   改为   属于正气虚的肺病
回家的路

--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -99,7 +99,7 @@
 
 **卷**  juàn 音义。    **眦**  zī，读恣。眼角。
 
-舌为心之官，正常的舌色应该是润泽的淡红色，正常的舌形应该柔软而伸缩自如。若舌色过分鲜红（舌赤），就是心病。色深赤焦卷，属邪气实的心病；色浅红滋润而短，属正气虚的心病。鼻为肺之官，鼻色发白，属肺有病。鼻色浅白，喘而不满，腻于正气啦的肺病；鼻色深白，喘而胸满多属寒邪饮实的肺病。目为肝之官，眼角出现青色，常反映出肝有疾患。眼角深青色，多属肝经风热所致之实证；色浅青的多属肝虚证。口唇为脾之官，正常的口唇颜色应该是红的。如果口唇出现黄色，就是脾有病，唇色深黄，甚至枯燥，常见于实证，例如内热便闭；如果口唇色浅黄而没有血色，常见于正虚证，例如久泻或小儿脾虚疳病等。耳为肾之官，正常的耳色，应该是黄红而润活。如果耳色青黑，就是肾有病。耳色深沉黯黑，是肾病实证，耳色浅黑，是肾病虚证。所谓深浅分彰者，即浅淡为虚，深浓为实，分明彰显。耳的形色，不仅是肾病的反映，同时也可反映全身病患，如危重病证，常常见到耳轮枯槁。
+舌为心之官，正常的舌色应该是润泽的淡红色，正常的舌形应该柔软而伸缩自如。若舌色过分鲜红（舌赤），就是心病。色深赤焦卷，属邪气实的心病；色浅红滋润而短，属正气虚的心病。鼻为肺之官，鼻色发白，属肺有病。鼻色浅白，喘而不满，属于正气虚的肺病；鼻色深白，喘而胸满多属寒邪饮实的肺病。目为肝之官，眼角出现青色，常反映出肝有疾患。眼角深青色，多属肝经风热所致之实证；色浅青的多属肝虚证。口唇为脾之官，正常的口唇颜色应该是红的。如果口唇出现黄色，就是脾有病，唇色深黄，甚至枯燥，常见于实证，例如内热便闭；如果口唇色浅黄而没有血色，常见于正虚证，例如久泻或小儿脾虚疳病等。耳为肾之官，正常的耳色，应该是黄红而润活。如果耳色青黑，就是肾有病。耳色深沉黯黑，是肾病实证，耳色浅黑，是肾病虚证。所谓深浅分彰者，即浅淡为虚，深浓为实，分明彰显。耳的形色，不仅是肾病的反映，同时也可反映全身病患，如危重病证，常常见到耳轮枯槁。
 
 **11.视色之锐，所向部官。内走外易，外走内难。**
 
