--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -187,7 +187,7 @@
 
 黑者肾之色，故病则面色发黑。恐属肾情志，故病则易感恐怖。肾之部位在下，故病则脐下有动气。肾主水，故病则水蓄，腹胀，肿满，喘不得卧。肾开窍于二阴。故病则大小便不利。肾主骨，肾与膀胱相表里，故病则小便不利少腹满，肾病往往腰背俱作酸痛。肾主欠，故病则常打呵欠。肾邪上乘于心，故病则心下悸浮或空如饥。诸厥属下，故病则是寒而厥逆。
 
-以上5条，原于《素问·阴阳应象大论》。简述了面色与五脏疚病及证候之间的关系，面部各部位分属脏腑，是面部望诊的基础。脏藏于内，象现于外，色与部位相结合，从外以知内，能更进一步了解病因、病机、病位、病性及病情、病势的变化。
+以上5条，原于《素问·阴阳应象大论》。简述了面色与五脏疾病及证候之间的关系，面部各部位分属脏腑，是面部望诊的基础。脏藏于内，象现于外，色与部位相结合，从外以知内，能更进一步了解病因、病机、病位、病性及病情、病势的变化。
 
 **21.黑色无痛，女疸肾伤。非疸血蓄，衄下后黄。**
 
