--- a/ok/qs/qs01_02.md
+++ b/ok/qs/qs01_02.md
@@ -48,7 +48,7 @@
 
 病中语言多于平常的属热证，反之则属寒证。声音雄壮的多为实证，反之则为虚证。说话的声音低微，而又上下句难以接续，这就可以知道是元气极度耗伤的病证了。如果病人意识模糊，精神错乱，语无伦次，则是神志失常的表现。
 
-前一节闸明了五脏有病，五声所起的变化。此节是以病人声音变化、语言状态来辨別疾病的寒热虚实和预后。夺气和神明已乱等病，多是预后不良的严重病证。言微难复为夺气，《中藏经》早有对夺气后语言情况的论述，认为若是语言微小得不能从喉向外发出，想讲话又不能讲出声音来，语言低微，难以接续，这是夺气的现象。
+前一节闸明了五脏有病，五声所起的变化。此节是以病人声音变化、语言状态来辨别疾病的寒热虚实和预后。夺气和神明已乱等病，多是预后不良的严重病证。言微难复为夺气，《中藏经》早有对夺气后语言情况的论述，认为若是语言微小得不能从喉向外发出，想讲话又不能讲出声音来，语言低微，难以接续，这是夺气的现象。
 
 **7.失音声重，内火外寒。疮痛而久，劳哑使然。哑风不语，虽治命难。讴歌失音，不治亦痊。**
 
