--- a/ok/qs/qs01_03.md
+++ b/ok/qs/qs01_03.md
@@ -60,13 +60,13 @@
 
 形气已经衰脱，脉象虽然调和，也是不好的征兆。形与气虽然都虚弱，只要脉象仍然调和，还是可以医治好的。形体虽然丰盛肥壮，而脉象细小且气机不足的人，是很难治疗的。形体衰弱消瘦而脉象反大，且气机雍实，是形不能胜气，多预后不良。
 
-本节第一段主要是问病人口味，以察知脏腑病变部位，即“视其五入，以知起止”。且可通过了解病人的偏食、嗜好，了解病变部位和性质。如病人素嗜食甘，过则伤脾，影响运化，则聚湿生痰等。笫二段主要问病人寒热发作的时间，以诊断疾病的阴阳、寒热性质和轻重转化。第三段是问饮食的多少和喜冷喜热的差异，再结合病人气机盛衰表现，以察知疾病的寒热虚实。第四段问病人排泄物的情况，以察知疾病的性质。第五段闸述了胃肠寒热亦可从二便情况察知。第六段讲察形体与饮食的关系。此段讲形色与脉象的关系。不难看出，问诊是医生对病人进行有目的有次序的查询病情，个人生活的习惯、嗜好、饮食情况、寒热、二便等都不可忽视。当然，本歌诀概括的内容是有限的，诸如经带、睡眠、汗液、疼痛等内容都没有涉及，临证时必须注意参详。
+本节第一段主要是问病人口味，以察知脏腑病变部位，即“视其五入，以知起止”。且可通过了解病人的偏食、嗜好，了解病变部位和性质。如病人素嗜食甘，过则伤脾，影响运化，则聚湿生痰等。第二段主要问病人寒热发作的时间，以诊断疾病的阴阳、寒热性质和轻重转化。第三段是问饮食的多少和喜冷喜热的差异，再结合病人气机盛衰表现，以察知疾病的寒热虚实。第四段问病人排泄物的情况，以察知疾病的性质。第五段闸述了胃肠寒热亦可从二便情况察知。第六段讲察形体与饮食的关系。此段讲形色与脉象的关系。不难看出，问诊是医生对病人进行有目的有次序的查询病情，个人生活的习惯、嗜好、饮食情况、寒热、二便等都不可忽视。当然，本歌诀概括的内容是有限的，诸如经带、睡眠、汗液、疼痛等内容都没有涉及，临证时必须注意参详。
 
 ### **附1：十问歌**（摘自《景岳全书·十问篇》）
 
 **一问寒热二问汗，三问头身四问便。**
 
-**五问饮食六问胸，七聋八渴倶当辨。**
+**五问饮食六问胸，七聋八渴俱当辨。**
 
 **九问旧病十问因，更兼服药参机变。**
 
