--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -10,7 +10,7 @@
 
 脉管是血液汇集的地方、全身（百体）的血液运行，都是通过脉管贯通的。寸口这个部位为手太阴肺经的动脉，肺朝百脉，百脉一宗归于肺，所以全身的脏腑脉经气血情况，都可以在寸口脉上反应出来。给病人诊脉的部位在掌后高骨内侧，分寸、关、尺三部。界于寸与尺中间的叫关部，关上为寸，从高骨到鱼际约一寸，故叫寸部，关下为尺，从高骨下到尺泽穴约长一尺，故叫尺部，寸关尺三部合起来约长一寸，所以总称寸口。寸、关、尺、寸口就是根据这些部位来命名的。寸部候身体上部疾患，所以属阳，尺部候身体下部疾患，所以属阴。
 
-此段说明了诊脉部位在寸口。诊脉之所以要独取寸口这个部位，是因为寸口这个部位为手太阴肺经所主，肺朝百脉。五脏六腑经脉的气血来源于胃中水谷精微，而水谷精微又赖足太阴脾的输布，故叫“亦太阴也”。所以，全身的脏腑经脉气血的情况，都可以在寸口脉上体现出来。《素问•五脏別论》说：“气口何以独为五脏主？曰：胃者，水谷之海，六腑之大源也。五味入口，藏于胃以养五脏气，气口亦太阴也。是以五脏六腑之气味，皆出于胃，变见于气口”。《难经•一难》说：“十二经皆有动脉，独取寸口以决五脏六腑死生吉凶之法，何谓也？然：寸口者，脉之大会，手太阴之动脉也。”这就是独取寸口的原理。并论述了切诊寸口脉的方法是“高骨上取”，吿诉我们寸、关、尺三部命名的由来以及阴阳的区分。
+此段说明了诊脉部位在寸口。诊脉之所以要独取寸口这个部位，是因为寸口这个部位为手太阴肺经所主，肺朝百脉。五脏六腑经脉的气血来源于胃中水谷精微，而水谷精微又赖足太阴脾的输布，故叫“亦太阴也”。所以，全身的脏腑经脉气血的情况，都可以在寸口脉上体现出来。《素问•五脏别论》说：“气口何以独为五脏主？曰：胃者，水谷之海，六腑之大源也。五味入口，藏于胃以养五脏气，气口亦太阴也。是以五脏六腑之气味，皆出于胃，变见于气口”。《难经•一难》说：“十二经皆有动脉，独取寸口以决五脏六腑死生吉凶之法，何谓也？然：寸口者，脉之大会，手太阴之动脉也。”这就是独取寸口的原理。并论述了切诊寸口脉的方法是“高骨上取”，吿诉我们寸、关、尺三部命名的由来以及阴阳的区分。
 
 **2.右寸肺胸，左寸心膻。右关脾胃，右肝膈胆。**
 
@@ -34,7 +34,7 @@
 
 **额颊耳前，寸口岐锐，下足三阴，肝肾脾胃。**
 
-**竟** 从头到尾。**岐**gi，读奇，歧骨，大指次指交叉处骨。 **锐**  锐骨，桡骨茎突。 **上** 寸部。**下** 尺部。
+**竟** 从头到尾。**岐**qi，读奇，歧骨，大指次指交叉处骨。 **锐**  锐骨，桡骨茎突。 **上** 寸部。**下** 尺部。
 
 诊脉的方法有七种，用手在皮肤上轻按的叫“浮”，比浮略重按一些的叫“中”，用手重按的叫“沉”，从寸部向前推移叫“上”，从尺部向后推移叫“下”，从左往右推叫“右”，从右往左推叫“左”，亦称内推外推。浮、中、沉、上竟、下竟、左右推等七诊，是讲推寻取脉的方法。男子以左手的脉大有力为好，女子以右手的脉大有力为适宜。并认为男子两尺部脉经常表现为虚的多，而女子的尺部脉经常表现为坚实（所谓男左女右）。
 
@@ -84,7 +84,7 @@
 
 **浮沉已辨，滑涩当明。涩为血滞，滑为气壅。**
 
-**数shòu，谈朔，频致。 壅yōng，读拥，堵塞。**
+**数shòu，读朔，频数。 壅yōng，读拥，堵塞。**
 
 **涩**sè，读色，不流畅
 
