update ok/gl/gl02-0.0.4.0.0.md. 官还是宫

--- a/ok/gl/gl02-0.0.4.0.0.md
+++ b/ok/gl/gl02-0.0.4.0.0.md
@@ -6,7 +6,7 @@
 
 藏象学说是在整体观的指导下，来研究人体脏腑功能变化的。它把人体看成是一个由心为主宰，五脏为核心的有机整体，认为五脏的功能与自然界的四时变化有着密切地联系。
 
-（1）藏象学说认为：人体的各个脏腑虽各有所司，具有不同的生理功能，但心是人体生命活动的主宰，各个脏腑的功能活动，无不在心的统领下进行。《素问·灵兰秘典论》说：“心者，君主之宫也……故主明则下安，主不明则十二官危”。就突出强调了心对各个脏腑的统领作用。
+（1）藏象学说认为：人体的各个脏腑虽各有所司，具有不同的生理功能，但心是人体生命活动的主宰，各个脏腑的功能活动，无不在心的统领下进行。《素问·灵兰秘典论》说：“心者，君主之官也……故主明则下安，主不明则十二官危”。就突出强调了心对各个脏腑的统领作用。
 
 （2）藏象学说认为：人体的各个脏腑之间不是孤立的，每一脏腑之间都有着特定的络属关系。如心与小肠，心为脏，小肠为腑，二者互为表里，在经络上相互络属，生理上相互为用，病变时相互影响。在这种脏腑的相互关系中，五脏是起主导和决定作用的。如：肾与膀胱是互为表里的一对脏腑，膀胱司开合、排尿液的作用主要决定于肾的气化功能。
 
