--- a/ok/shl/shl0000.md
+++ b/ok/shl/shl0000.md
@@ -92,7 +92,7 @@
 
 ### （二）关于方剂学成就。
 
-《伤寒论》所载方剂，大多用药精当，配伍严谨，疗效可靠，至今沿用不衰，故后世誉之为“方书之祖”。本论虽载112方，但其意义与价值却远远超出了这些方剂的本身。晋·皇甫谧《甲乙经·序》云：“伊尹以亚圣之才，撰用《神农本草》，以为《汤液》”，“仲景论广伊尹《汤液》为数十卷，用之多验”。严器之《注解伤寒论·序》云：“伊尹以元圣之才撰成《汤液》，俾黎庶之疾疚，咸遂蠲除，使万代之生灵，普蒙拯济。后汉张仲景，又广《汤液》为《伤寒卒病论》十数卷，然后医方大备”。《伤寒杂病论序》又有“博采众方”之语。从而可以看出，仲景在方剂学方面，继承了汉以前的复方成就，特别是对《汤液经》进行了研究、继承、发扬与推广，从而便使汤液治病法流传发展至今，在当今汤液治病已成为极其普遍的治病方法而广泛应用的时候，其中则有着仲景的不可磨灭的贡献。尤其重要的是，仲景把复方的应用与在基础理论指导下的辨证结合起来，法随证立，方从法出，创立了理法方药兼备的辨证与论治相结合的诊疗体系，这就使祖国医学的诊疗程序臻于完备，为临证医学的发展树立了里程碑。此外，本论所用112方包括了汗、吐、下、清，消、和、温、补、涩诸法的运用，并对各法的适应证、禁忌证，具体施用方法及注意事项，大多有详尽论述，皆为后世之所本。论中所载剂型，涉汤、丸、散、膏、浸剂、酒剂。混悬剂、唅剂、灌肠剂、肛门栓剂等等，其制备与应用方法皆有详述，开中医药剂
+《伤寒论》所载方剂，大多用药精当，配伍严谨，疗效可靠，至今沿用不衰，故后世誉之为“方书之祖”。本论虽载112方，但其意义与价值却远远超出了这些方剂的本身。晋·皇甫谧《甲乙经·序》云：“伊尹以亚圣之才，撰用《神农本草》，以为《汤液》”，“仲景论广伊尹《汤液》为数十卷，用之多验”。严器之《注解伤寒论·序》云：“伊尹以元圣之才撰成《汤液》，俾黎庶之疾疚，咸遂蠲除，使万代之生灵，普蒙拯济。后汉张仲景，又广《汤液》为《伤寒卒病论》十数卷，然后医方大备”。《伤寒杂病论序》又有“博采众方”之语。从而可以看出，仲景在方剂学方面，继承了汉以前的复方成就，特别是对《汤液经》进行了研究、继承、发扬与推广，从而便使汤液治病法流传发展至今，在当今汤液治病已成为极其普遍的治病方法而广泛应用的时候，其中则有着仲景的不可磨灭的贡献。尤其重要的是，仲景把复方的应用与在基础理论指导下的辨证结合起来，法随证立，方从法出，创立了理法方药兼备的辨证与论治相结合的诊疗体系，这就使祖国医学的诊疗程序臻于完备，为临证医学的发展树立了里程碑。此外，本论所用112方包括了汗、吐、下、清，消、和、温、补、涩诸法的运用，并对各法的适应证、禁忌证，具体施用方法及注意事项，大多有详尽论述，皆为后世之所本。论中所载剂型，涉汤、丸、散、膏、浸剂、酒剂、混悬剂、唅剂、灌肠剂、肛门栓剂等等，其制备与应用方法皆有详述，开中医药剂
 技术发展之先河。在选药与组方上，谨守病机，严遵法度；君臣佐使，相得益彰；药量适宜，分铢权衡；药专力宏，功效卓著；随证化裁，灵活变通，堪称方剂之典范。后世称其为“经方”，则已非汉人将经验用方称之谓“经方“之意，而是指方剂的楷模、标准、典范。这些成就，都为中医方剂学的发展奠定了基础。此外，所倡汤液与针灸并用之法，也很有临证意义。
 
 ## 五、学习《伤寒论》的方法
