--- a/ok/bc/bc01-1.2.5.0.0.md
+++ b/ok/bc/bc01-1.2.5.0.0.md
@@ -13,7 +13,7 @@
 本品甘寒清热，质轻上浮。入肺、肝二经。既能宣散肺经风热，而达解表透疹之功，又能凉肝息风，而有止痉退翳之效，
 为清疏肺肝之品。主治外感风热，咳嗽音哑，麻疹透发不畅，风疹瘙痒，小儿惊痫，破伤风，目赤翳障以及疮疡肿毒等证。又可治小儿夜啼，至于治疗中风失音，临床不常应用。
 
-蚱蝉，即昆虫黑蚱的全虫。性味功效与蝉蛻相似，而长于息风定惊，多用于小儿惊风，夜啼等证。
+蚱蝉，即昆虫黑蚱的全虫。性味功效与蝉蜕相似，而长于息风定惊，多用于小儿惊风，夜啼等证。
 
 【临证应用】蝉蜕用于外感风热及温病初期，有发热头痛等表证者，常与薄荷、桑叶、连翘等同用，以凉散风热。若风热袭肺而致的发热咽痛，声音嘶哑，可单用或与胖大海配伍，以疏散风热，开宣肺气，如海蝉散。治风热目赤，翳膜遮睛，常配菊花用，如蝉菊散。麻疹初期，透发不畅，可借本品所具宣散作用助其透发，常配牛蒡子、薄荷、葛根等同用；风疹皮肤瘙痒，常与白蒺黎、荆芥、薄荷等同用。用于破伤风，虽可单用，但效力差，需用大量，每日30~60克，研末分三次黄酒送服；重症可与南星、天麻、全蝎、僵蚕等祛风止痉品同用，如五虎追风散；治小儿惊痫，夜啼而惊惕不安者，可与钩藤伍用，以息风定惊。
 
