--- a/ok/bc/bc01-1.2.6.0.0.md
+++ b/ok/bc/bc01-1.2.6.0.0.md
@@ -1,11 +1,11 @@
 ### 淡豆豉
 
-〔原文〕苦泄肺，寒胜热。<small>陈藏器曰，豆性生平，
+〔原文〕苦泄肺，寒胜热。<small>陈藏器曰：豆性生平，
 炒熟热，煮食寒，作鼓冷</small>。发汗解肌，调中下气。治伤寒头
 痛，烦躁满闷,懊憹<sup>⑴</sup>不眠，发斑呕逆，<small>凡伤寒呕逆烦闷，宜引吐，不宜用下药以逆之。血痢温疟。时珍曰：黑豆性平， 作豉则温。既经蒸窨，故能升能散。得葱则发汗，得盐则能吐，得酒则治
 风，得薤则治痢，得蒜则止血。炒熟又能止汗。孟诜治盗汗，炒香渍酒服，
 《肘后》合葱白煎，名葱豉汤，用代麻黄汤。通治伤寒发表，亦治温病</small>。
-造淡豉法:用黑大豆水浸一宿，淘净蒸熟，摊匀。
+造淡豉法：用黑大豆水浸一宿，淘净蒸熟，摊匀。
 蒿复，候上黄衣，取晒，簸净，水拌，干湿得所，安
 瓮中，筑实。桑叶厚盖，泥封。晒七日取出，曝一时，又水拌入瓮。如此七次，再蒸，去火气，瓮收用。
 
