--- a/ok/bc/bc01-1.2.6.0.0.md
+++ b/ok/bc/bc01-1.2.6.0.0.md
@@ -15,13 +15,13 @@
 羌活等药加工而成者。	
 
 本品辛微苦，性寒。入肺、胃经。黑大豆本为营养之品，经与表散药同制发酵后，则具有疏散宣透之性，既能透解表邪，又能宣散郁热。其发汗解表之力颇为平稳，有发汗不甚伤阴之说，
-故为温热病初起表证之主药。至于用洽烦躁满闷，懊憹不眠等邪热郁于胸中所致之症，亦取其宣透之性。故凡温邪初感，或余热内扰，欲透发者，本品最为常用。
+故为温热病初起表证之主药。至于用治烦躁满闷，懊憹不眠等邪热郁于胸中所致之症，亦取其宣透之性。故凡温邪初感，或余热内扰，欲透发者，本品最为常用。
 
 本品依其加工所用辅料之不同而性质有异。与桑叶、青嵩同制，则药性偏于寒凉，主要用于风热之证；与麻黄、苏叶等同制，药性偏于辛温，主要用于风寒之证。
 
 【临证应用】 豆豉用于感冒或热病初期，发热，恶风寒，
 头痛等证，属风热者，常配薄荷、银花、荆芥、牛蒡子等同用，
-如银翘散；属风寒者，常与葱白同用，如葱豉汤。.若热病后期，
+如银翘散；属风寒者，常与葱白同用，如葱豉汤。若热病后期，
 余热未尽，胸中烦闷，懊憹不眠者，可配栀子以清热除烦，如栀子豉汤。
 
 【用量用法】 10—15克，煎服。
