--- a/ok/gl/gl05-0.3.2.1.0.md
+++ b/ok/gl/gl05-0.3.2.1.0.md
@@ -10,7 +10,7 @@
 
 但热不寒，是指病人身热恶热而不恶寒；自觉发热；或只见五心烦热等。发热原因很多，总可分为外感与内伤两大类。外感发热，一般发病急，热势高，且初起多见发热恶寒之表证，在表邪入里后，即表现为但热不寒；内伤发热，一般发病缓慢，热势不高，且初起无发热恶寒兼见之表证存在。
 
-壮热：即大热、盛热，手按病人肌肤而有烫手的感觉，且久按热感不减，多蒹见口渴面赤气粗等称为壮热。外感病壮热，见于伤寒为风寒之邪入里化热，如阳明经证和腑证；见于温病为热邪内传气分、血分等，如风温，热邪犯肺；湿温、暑温邪在气分；及温病热入营血。内伤壮热，见于宿食所伤，为夜间热甚。壮热之症为里热实证，为正盛邪实，邪正剧争表现。
+壮热：即大热、盛热，手按病人肌肤而有烫手的感觉，且久按热感不减，多兼见口渴面赤气粗等称为壮热。外感病壮热，见于伤寒为风寒之邪入里化热，如阳明经证和腑证；见于温病为热邪内传气分、血分等，如风温，热邪犯肺；湿温、暑温邪在气分；及温病热入营血。内伤壮热，见于宿食所伤，为夜间热甚。壮热之症为里热实证，为正盛邪实，邪正剧争表现。
 
 潮热：是发热之微甚作止均有定时，有如潮水之来，一日一发，多发于午后。若日发二次以上者，即非潮热。潮热有外感内伤之分，虚实之别。外感为实，内伤多虚。外感：伤寒阳明腑实证，为日晡潮热，蒹见腹满痛拒按，大便燥结，手足汗出，舌苔黄燥等燥热内结之证；温病热入营血发热夜甚及温病后期余邪伏于阴分之夜热早凉。温病湿温证，为午后潮热（午后热甚），但身热不扬，初按肌肤不觉甚热，久按则灼手，是热为湿邪阻遏，难以透达于外所致，多兼见胸闷呃恶，身重便溏，苔腻以及暑热伤气等。内伤潮热，多见于气虚、阴虚、虚损证（肝、肺、肾阴虚等）、血虚、血瘀，气郁等。内伤潮热，有时有热自骨发之感（骨蒸潮热）。内伤以阴虚，气虚为多见。阴虚者多伴有五心烦热、盗汗、颧赤、舌红少津等；气虚者如脾胃气虚下陷的发热，肾气虚不能引火归元的发热，则潮热见于清晨，伴有自汗，或动则汗出，少气，乏力，面色㿠白等症状，且遇劳则甚。清•张石顽等还指出内伤之痰饮、宿食皆可出现潮热症状。内伤潮热，病势缓，热势不甚而病程长。
 
