--- a/ok/gl/gl02-0.1.1.1.0.md
+++ b/ok/gl/gl02-0.1.1.1.0.md
@@ -26,7 +26,7 @@
 
 此外，还应指出，心包络、肝、脾、肾四经，均与舌本相通，若此四经有病，亦往往连及舌本。此点在临床中亦应注意。
 
-（4）在志为喜  心在志为喜，是说心的生理功能与五志中的“喜”有关。藏象学说认为，人的情志变化是由五脏所化生，故将喜，怒、忧、思、恐称为五志，而分属于五脏。《素问·天元纪大论》说：“人有五脏化五气，以生喜、怒、忧思、恐”。《素问·阴阳应象大论》说：心“在志为喜”，这是说五志之中，喜为心之志。一般说来，喜有益于心主血脉等生理功能，故《素问·举痛论》说：“喜则气和志达，营卫通利”。但若喜乐过度，则可使心神受伤，正如《素问·阴阳应象大论》说：“喜伤心”。
+（4）在志为喜  心在志为喜，是说心的生理功能与五志中的“喜”有关。藏象学说认为，人的情志变化是由五脏所化生，故将喜，怒、忧、思、恐称为五志，而分属于五脏。《素问·天元纪大论》说：“人有五脏化五气，以生喜、怒、忧、思、恐”。《素问·阴阳应象大论》说：心“在志为喜”，这是说五志之中，喜为心之志。一般说来，喜有益于心主血脉等生理功能，故《素问·举痛论》说：“喜则气和志达，营卫通利”。但若喜乐过度，则可使心神受伤，正如《素问·阴阳应象大论》说：“喜伤心”。
 
 〔心与四时气候的关系〕
 
