update ok/gl/gl02-0.1.1.2.0.md. 原文于字也不通

--- a/ok/gl/gl02-0.1.1.2.0.md
+++ b/ok/gl/gl02-0.1.1.2.0.md
@@ -12,7 +12,7 @@
 
 （2）肺朝百脉、主治节  肺朝百脉，是说人之一身血脉，均朝会于肺，并通过肺气的调节和敷布，输布于全身。《素问·经脉别论》说：“食气入胃，浊气归心，淫精于脉，脉气流经，经气归于肺，肺朝百脉，输精于皮毛”。中医学认为，血的运行依赖于气的推动。心气推动，是血运行的基本动力，而心气又有赖于肺气的敷布。正如《医学真传》所说：“气非血不和，血非气不运”。
 
-肺主治节，语出《素问·灵兰秘典论》：“肺者，相傅之官，治节出焉”。“相傅”，有辅佐、协助之意，“治节”，就是治理、调节。这句话是说，肺有协助、辅佐心对人体各脏腑的生理功能具有治理与调节的作用。故张介宾在《类经·脏象类》中说：“肺主气，气调则营卫脏腑无所不治”。肺的治节作用，主要体现在三个方面：一是肺司呼吸，通过肺的呼吸作用，以调节全身的气机升降；二是肺主气，通于肺对宗气的生成、输布的调节，以助心气，推动和调节血的运行；三是通过肺对全身气机的调节，调理全身津液的输布、运行与排泄。由此可见，肺主治节，是对肺的主要生理功能的高度概括。如若肺主治节功能失常，则宗气生成无源，布散无力，从而血行失序，津液失调。
+肺主治节，语出《素问·灵兰秘典论》：“肺者，相傅之官，治节出焉”。“相傅”，有辅佐、协助之意，“治节”，就是治理、调节。这句话是说，肺有协助、辅佐心对人体各脏腑的生理功能具有治理与调节的作用。故张介宾在《类经·脏象类》中说：“肺主气，气调则营卫脏腑无所不治”。肺的治节作用，主要体现在三个方面：一是肺司呼吸，通过肺的呼吸作用，以调节全身的气机升降；二是肺主气，通过肺对宗气的生成、输布的调节，以助心气，推动和调节血的运行；三是通过肺对全身气机的调节，调理全身津液的输布、运行与排泄。由此可见，肺主治节，是对肺的主要生理功能的高度概括。如若肺主治节功能失常，则宗气生成无源，布散无力，从而血行失序，津液失调。
 
 （3）肺主宣发肃降  肺主宣发肃降，是说肺气具有向上的升宣和向外的布散，以及向下的清肃与通降的作用。
 
