--- a/ok/gl/gl02-0.1.1.2.0.md
+++ b/ok/gl/gl02-0.1.1.2.0.md
@@ -22,7 +22,7 @@
 
 肺的宣发与肃降，相反相成，即对立又统一，没有正常的宣发，则不能很好地肃降，反之，肃降不利，亦可影响正常的宣发。肺有宣有降，方可使气道通畅，呼吸均匀，使气血津液布散周身，濡养皮毛，使水液下输膀胱，而无水湿停滞之患。若宣降失和，就会出现“肺气不宣”、“肺失肃降”或“肺气上逆”等病变。故《素问·至真要大论》说：“诸气膹郁，皆属于肺”。
 
-（4）通调水道  肺在人体水液的代谢中，起着疏通与调节的作用，习惯上称为“通调水道”，肺通调水道的功能，也主要依赖于肺气的宣发与肃降。宣发则使水津四布，腠理开合，汗液排泄；肃降则使水液下输膀胱，经肾之气化，排出体外正是由于肺有这种调节水液代谢的作用，故有“肺主行水”，“肺为水之上源”的说法。若肺通调水道功能失常，则可因水湿停聚而生痰生饮，甚至发生水肿等症。
+（4）通调水道  肺在人体水液的代谢中，起着疏通与调节的作用，习惯上称为“通调水道”，肺通调水道的功能，也主要依赖于肺气的宣发与肃降。宣发则使水津四布，腠理开合，汗液排泄；肃降则使水液下输膀胱，经肾之气化，排出体外。正是由于肺有这种调节水液代谢的作用，故有“肺主行水”，“肺为水之上源”的说法。若肺通调水道功能失常，则可因水湿停聚而生痰生饮，甚至发生水肿等症。
 
 〔肺与组织器官的关系〕
 
