--- a/ok/bc/bc01-1.2.7.0.0.md
+++ b/ok/bc/bc01-1.2.7.0.0.md
@@ -1,6 +1,6 @@
 ### 蔓荆子
 
-（原文〕辛苦微寒，轻浮升散。入足太阳、阳明、厥阴 <small>膀胱、胃、肝。</small>经。搜风凉血，通利九窍,治湿痹拘挛，头痛脑鸣<sup>(1)</sup>，<small>太阳脉络于脑</small>。目赤齿痛，<small>齿虽属肾，为骨之余，而上龈属足阳明，下龈属手阳明。阳明风热上攻，则动摇肿痛</small>。头面风虚之证。明目固齿，长发泽肌。去膜，打碎用，亦有酒蒸炒用者。恶石膏、乌头。
+（原文〕辛苦微寒，轻浮升散。入足太阳、阳明、厥阴 <small>膀胱、胃、肝。</small>经。搜风凉血，通利九窍。治湿痹拘挛，头痛脑鸣<sup>(1)</sup>，<small>太阳脉络于脑</small>。目赤齿痛，<small>齿虽属肾，为骨之余，而上龈属足阳明，下龈属手阳明。阳明风热上攻，则动摇肿痛</small>。头面风虚之证。明目固齿，长发泽肌。去膜，打碎用，亦有酒蒸炒用者。恶石膏、乌头。
 
 【讲解】（1）脑鸣：证名。指头内如虫蛀样鸣响。
 
