--- a/ok/bc/bc01-1.2.7.0.0.md
+++ b/ok/bc/bc01-1.2.7.0.0.md
@@ -4,12 +4,12 @@
 
 【讲解】（1）脑鸣：证名。指头内如虫蛀样鸣响。
 
-**蔓荆子善于升散头面风热，主治风热头痛。**。为马鞭草科落叶小灌木植物单叶蔓荆和蔓荆的果实。阴干、炒至焦黄色用。
+**蔓荆子善于升散头面风热，主治风热头痛。**为马鞭草科落叶小灌木植物单叶蔓荆和蔓荆的果实。阴干、炒至焦黄色用。
 
 蔓荆子味辛苦，性微寒。入膀胱、肝、胃经。辛可散风，微寒能清热，质轻上行，善于升散头面风热，故常用于外感风热所引
 起的头痛头晕，以及头风痛等证。亦能散肝经风热，清利头目，以治目昏多泪，目赤肿痛等证。其治湿痹拘挛，亦是取其散风胜湿之效，唯现在应用较少。
 
 【临征应用】蔓荆子治疗外感风热所致的头昏头痛，以偏头痛证为优，可单用蔓荆子漫酒服，或配伍防风、菊花、川芎等，
-以增强祛风止痛效果。与菊花、蝉蛻、白蒺藜等同用，治疗风热上扰或肝经风热所致之目昏，目赤肿痛，多泪等证。与防风、秦艽、木瓜等配伍，可用于风湿痹痛、肢体挛急之证。
+以增强祛风止痛效果。与菊花、蝉蜕、白蒺藜等同用，治疗风热上扰或肝经风热所致之目昏，目赤肿痛，多泪等证。与防风、秦艽、木瓜等配伍，可用于风湿痹痛、肢体挛急之证。
 
 【用量用法】6~12克，煎服或浸酒，并入丸、散用。	
