--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -1,5 +1,9 @@
 # 第二章 天地自然
 
+[TOC]
+
+
+
 ## 1 、概述：
 
 绪论中说过，中医把人体看做一个温室花园，而我们生存的自然界则是一个更大的温室花园，两者的运转机制有相似之处，中医中三阴三阳、六气、五行等概念皆来自于自然界。另外人生存于自然界中，其物质与能量都从自然界获得，所以人体受自然界的影响非常大。 
@@ -8,11 +12,11 @@
 
 > “人以天地之气生，四时之法成。”
 >
-> 《黄帝内经讲解--天地形气的相互关系及其作用》
+> 《黄帝内经讲解—天地形气的相互关系及其作用》
 
-> **天地之间，六合之内，其气九州九窍、五藏、十二节，皆通乎天气(1)。其生五，其气三(2)，数犯此者，则邪气伤人，此寿命之本也(3)。** 
+> **天地之间，六合之内，其气九州九窍、五藏、十二节，皆通乎天气。其生五，其气三，数犯此者，则邪气伤人，此寿命之本也。** 
 >
-> 《素问•生气通天论》
+> ——《素问•生气通天论》
 
 > 《内经》认为宇宙是一个大天地，人体是一个“小天地”，而且人与天地相参应。
 >
@@ -22,7 +26,7 @@
 
 中医中大量使用气的概念，非常重要。但是气的定义却有些模糊。这里需要做一些分析：
 
-1、气一元论中的气：
+**1、气一元论中的气**
 
 在中国古代哲学里面有“气一元论”的说法，认为气是宇宙的本原，是构成天地万物的基本物质。
 
@@ -44,7 +48,7 @@
 >
 > 《中医药学概论-藏象-气、血、津液》
 
-2、形气中的气
+**2、形气中的气**
 
 这里气是与形相对的，形指的是固态或液态的物质，气指的是气态的物质。对于自然界来说，泥土、石头、木材、水都属于形，空气、水蒸气属于气。
 
@@ -52,7 +56,7 @@
 
 > 在天为气，在地成形，形气相感而化生万物矣
 >
-> 《素问·天元纪大论》
+> ——《素问•天元纪大论》
 
 > “形”，指具有形体的物质。《内经》认为天和地的相互作用，是自然界运动变化的重要原因，在天的无形之气与在地的有形之质相互交感，相互作用，于是化生万物。
 >
@@ -64,13 +68,13 @@
 >
 > 《黄帝内经讲解-阴阳学说-（十二）阴阳的性质和作用》
 
-3、小结：
+**3、小结**
 
 以上两种气，一为质能基本单元的气，另一个是气态物质的气，这是两个范畴的概念，应该用不同的词来表示。现在两者混用确实增加了理解的难度。学习中医的人要理解不同语境下气的含义。
 
 
 
-### 1.2天地的概念
+### 1.2 天地的概念
 
 天地指的是我们生存的自然界。
 
@@ -80,13 +84,13 @@
 
 天指的是无形的大气，也可以理解为大气层。地指的是有形的大地物质，可以理解为地球的实体。两者的主要区别在于密度。密度大而下降的物质叫浊阴，形成大地；密度小而上升的气体属于清阳，形成天空。
 
-> 《内经》认为天是由轻清上浮的阳气积聚而成的，故属阳，地是由重浊下沉的阴气凝结而成的，故属阴。地浮悬于太虚之中，天包裹乎大地之外，所以说天气主外，地气主内，这反映了古天文学浑天说的先进认识。
+> 《内经》认为天是由轻清上浮的阳气积聚而成的，故属阳；地是由重浊下沉的阴气凝结而成的，故属阴。地浮悬于太虚之中，天包裹乎大地之外，所以说天气主外，地气主内，这反映了古天文学浑天说的先进认识。
 >
 > 《黄帝内经讲解--阴阳分主内外、虚实的规律》
 
 
 
-![](img/%E5%A4%A9%E5%9C%B0.svg)
+<img src="img/%E5%A4%A9%E5%9C%B0.svg" style="zoom:50%;" />
 
 
 
@@ -106,7 +110,7 @@
 >
 > 故清阳为天，浊阴为地；
 >
-> 《素问-阴阳应象大论》
+> ——《素问•阴阳应象大论》
 
 > 阳可以把物质转化为**精微之气**，以促进万物的生长；转化为动力，以促进人体的生命活动，所以称为“阳化气”；“阴”，指**有形可见的物质（如精、血、津液等）**，它可以充养形体组织，有促进万物成长壮大的作用，所以又称为“阴成形”。
 >
@@ -132,9 +136,9 @@
 >
 > 岐伯曰：**大气举之也。...**
 >
-> 《黄帝内经-五运行大论》
+> ——《黄帝内经•五运行大论》
 
-### 1.3气交之地-地表上下的生命繁荣区域
+### 1.3 气交之地—地表上下的生命繁荣区域
 
 天气、地气包含了整个地球和地球外面的大气，是非常大的区域。
 
@@ -152,13 +156,13 @@
 >
 > 故曰：天枢之上，天气主之；天枢之下，地气主之；气交之分，**人气从之，万物由之**，此之谓也。
 >
-> 《素问-六微旨大论篇第六十八》
+> ——《素问•六微旨大论篇第六十八》
 
 > **天覆地载，万物方生**。未出地者，命曰阴处，名曰阴中之阴；则出地者，命曰阴中之阳。
 >
 > 阳予之正，阴为之主。故生因春，长因夏，收因秋，藏因冬。夫常则天地四塞。阴阳之变，其在人者，亦数之可数。
 >
-> 《素问-阴阳离合篇第六》
+> ——《素问•阴阳离合篇第六》
 
 > 为什么称为中运？
 >
@@ -174,15 +178,15 @@
 
 > 《内经》认为天和地的相互作用，是自然界运动变化的重要原因，在天的无形之气与在地的有形之质相互交感，相互作用，于是化生万物。因此，天地是化生万物的物质基础，是生命的起源。
 >
-> 《黄帝内经讲解--天地形气的相互关系及其作用》
+> 《黄帝内经讲解-天地形气的相互关系及其作用》
 
 为了方便大家的理解，后面我们会经常将自然界、人体、室温取暖、烧水煮菜等例子进行对比讲解。因为这几个事物都有共同的机制，即在一个相对温度较低的外界环境中维持了一个较高温度的内部环境，并有气、液、固三态之间的互转过程，进而完成各自的目的。比如自然界如果没有太阳的照射，原本是一个很寒冷的环境，有了太阳这个热源后，自然界才形成了适宜的温度，天地交互，云升雨降，各种生命才能在其中生长。再比如北方冬天，室内要有暖气提供热源，否则不能住人。煮菜的时候需要有火加热到一定温度，才能把菜煮熟。人体也是一样，人体温度37度左右，比室温高，所以人体也要有热源来维持温度平衡，同时人体也有气态和固液态物质的相互转换、交换过程。
 
 中医学很多概念是围绕这个核心原理发展而来，后面会慢慢说明。
 
-### 2.1太阳阳气与地球阴气的平衡
+### 2.1 太阳阳气与地球阴气的平衡
 
-#### 2.1.1能量的总量均衡
+#### 2.1.1 能量的总量均衡
 
 适宜的能量是自然界温度平衡的前提条件。这个能量主要来自太阳。
 
@@ -206,17 +210,15 @@
 
 `所以说，阴阳是万事万物规律的总体概括。但是落实到具体事物的时候，一定要说清楚作用和指标，否则非常容易引起理解混乱。在以后的叙述中，会尽量把天气和阳气分别说明。`
 
-
-
-> **阳气者若天与日，失其所则折寿而不彰(1)，故天运当以日光明。是故阳因而上，卫外者也(2)。**
+> **阳气者若天与日，失其所则折寿而不彰，故天运当以日光明。是故阳因而上，卫外者也。**
 >
-> 《素问·生气通天论》
+> ——《素问•生气通天论》
 
 > *由于生命活动的存在，不能一时一刻离开阳气，故后世医家把肾中阳气视为“立命之本”，称之为真阳，真火。可见阳气代表着人体具有阳性特征的精微物质，及其产生的热能和动力。它的物质基础是精，它的属性是火，来源于先天，但要靠后天的补充和营养。《内经》作者在此以天空和太阳的关系作比喻，形象地说明人体阳气的重要性。因为自然界的运动，万物的生长，都离不开太阳，它的光和热，为地球上一切生命活动提供了生存的条件。*
 >
 > 《黄帝内经讲解-阴阳学说-（十六）阳气的重要性》
 
-#### 2.1.2三阴三阳
+#### 2.1.2 三阴三阳
 
 地球绕太阳一周为一年，此周期内，**太阳阳气与地球阴气互有进退**，形成波动。根据阴阳比例的不同，分为三阴三阳六个阶段。（六个阶段的具体时间，内经没有给出说明）
 
@@ -228,13 +230,13 @@
 >
 > 即一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。
 >
-> ....可见三阴三阳在定位方面，有上下左右之分，在定性方面，有阴阳盛衰之分，在定量方面，有太、少、厥、阳明之分。并接着指明：“此谓气之标，南面而待也。故曰：因天之序，盛衰之时，移光定位，正立而待之，此之谓也。”....而这些变化的测定，是在日当中午的时分，**观察日影投射在圭表（古代测量日影长度数值的天文仪器）的长度数值**测知的。如冬至节日影最长，夏至节日影最短，春分、秋分日影长短相等等。.....故《生气通天论》曰：‘天运当以日光明。’正此移光定位之义。”这说明三阴三阳的划分，依据的是天文学的六气变化规律。
+> ....可见三阴三阳在定位方面，有上下左右之分，在定性方面，有阴阳盛衰之分，在定量方面，有太、少、厥、阳明之分。并接着指明：“此谓气之标，南面而待也。故曰：因天之序，盛衰之时，移光定位，正立而待之，此之谓也。”....而这些变化的测定，是在日当中午的时分，**观察日影投射在圭表（古代测量日影长度数值的天文仪器）的长度数值**测知的。如冬至节日影最长，夏至节日影最短，春分、秋分日影长短相等等。……故《生气通天论》曰：‘天运当以日光明。’正此移光定位之义。”这说明三阴三阳的划分，依据的是天文学的六气变化规律。
 >
 > 《黄帝内经讲解-阴阳学说-（五）三阴三阳的划分》
 
 > **阴阳之气各有多少，故曰三阴三阳也。**
 >
-> 《素问·天元纪大论》
+> ——《素问•天元纪大论》
 
 > 因此，三阴三阳的运转总是按一阳（少阳）→二阳（阳明）→三阳（太阳）→一阴（厥阴）→二阴（少阴）→三阴（太阴）→一阳（少阳）这样的次序进行，如此周而复始，如环无端。它们在一年之中各有一定位置，按照一定规律进行运转。这也就是原文所谓的：“上下有位，左右有纪。
 >
@@ -246,7 +248,7 @@
 
 `可见伤寒论是论述寒邪侵袭人体，由外而内的过程。`
 
-#### 2.1.3四季与昼夜将能量进行均衡分配
+#### 2.1.3 四季与昼夜将能量进行均衡分配
 
 在地球获得的太阳能量总量均衡的前提下，能量在地表不同部位的的分布也要尽量均衡，避免出现某处获得的能量过多，而其他地方获得能量太少的情况。
 
@@ -260,7 +262,7 @@
 
 太阳的能量半年集中在南半球，另外半年集中在北半球。这种轮换机制，让南北半球都不至于过热或过寒。否则，南、北半球将一个永远是夏天，一个永远是冬天。
 
-> 如果没有黄道与赤道相交（“地球一边公转，一边自转。有公转就有轨道平面，即黄道平面。有自转，就有赤道平面。在黄道平面与赤道平面之间有一个交角，叫做黄赤交角。目前的黄赤交角是23º26′。地轴同轨道平面斜交的角度为90º一23º26′=66º34′，并且地轴在宇宙空间的方向不同因季节而变化。因此，在地球绕日公转过程中，太阳有时直射到北半球，有时直射在南半球，有时直射在赤道上。），就不可能分阴分阳，也就不会有四时寒暑的变化。
+> 如果没有黄道与赤道相交（“地球一边公转，一边自转。有公转就有轨道平面，即黄道平面。有自转，就有赤道平面。在黄道平面与赤道平面之间有一个交角，叫做黄赤交角。目前的黄赤交角是23º26′。地轴同轨道平面斜交的角度为90º-23º26′=66º34′，并且地轴在宇宙空间的方向不同因季节而变化。因此，在地球绕日公转过程中，太阳有时直射到北半球，有时直射在南半球，有时直射在赤道上。），就不可能分阴分阳，也就不会有四时寒暑的变化。
 >
 > 《黄帝内经讲解-（三）四时阴阳、寒热的变化规律》
 
@@ -270,23 +272,23 @@
 
 这与烤羊肉串要不停旋转，炒菜要不断翻炒的原理是一样的，都是起到均衡能量的作用。
 
-> **平旦至日中，天之阳，阳中之阳也(1)；日中至黄昏，天之阳，阳中之阴也(2)；合夜至鸡鸣，天之阴，阴中之阴也(3)；鸡鸣至平旦，天之阴，阴中之阳也。故人亦应**
+> **平旦至日中，天之阳，阳中之阳也；日中至黄昏，天之阳，阳中之阴也；合夜至鸡鸣，天之阴，阴中之阴也；鸡鸣至平旦，天之阴，阴中之阳也。故人亦应之。**
 >
-> 《素问•金匮真言论》
+> ——《素问•金匮真言论》
 
 > 这是根据太阳周日运动时，地面接受太阳光热的多少来分析昼夜阴阳的消长情况。如张介宾注云:“一日之气，自卯时日出地上为昼，天之阳也；自酉时日入地中为夜，天之阴也”。白昼虽属阳，但上午与下午的阳气有所差别，张志聪注云:“平旦至日中，阳气正隆，应长夏之气，故为阳中之阳”。......
 >
 > 昼夜阴阳消长与人体的关系，无论在生理活动或病理变化方面，都有比较明显的反映。....继《内经》之后，仲景早已把这一理论运用于临床，提出了六经病欲解的具体时间，这对于把握病理机转，大有禆益。....仲景云：少阴之病欲解时，以子至寅，乘此阳道方亨之时而投之，药易以入，故仲景《伤寒论》中，逐时分治，不可不考。”
 >
-> 《黄帝内经讲解-人与自然-(六）人体与昼夜阴阳相应》
+> 《黄帝内经讲解-人与自然-（六）人体与昼夜阴阳相应》
 
 
 
-### 2.2天气、地气的平衡
+### 2.2 天气、地气的平衡
 
 大气的底层和陆地海洋的顶层是各种生命存在的的地方，称为气交之地。前面太阳阳气与地球阴气达到平衡只是满足了一个基本前提，气交之地要想形成温度合适，适宜生命存在的区域，还有其它平衡机制需要满足。这就包括天地之间的能量和物质交互的平衡。
 
-#### 2.2.1天地能量交互平衡
+#### 2.2.1 天地能量交互平衡
 
 ##### 天气地气各自的能量平衡
 
@@ -294,11 +296,11 @@
 
 天气地气的变化一般与地表接受到太阳能量的变化有30天左右的延迟，比如夏至是太阳能量最多的时候，但是气候最热的时候大约出现在30天以后的大暑。冬至是太阳能量最少的时候，气候最冷的时候大约是30天以后的大寒。这就像我们烧水，火最旺的时候，并不是水最热的时候，中间有个加热延迟的过程，两者一个道理。
 
-> **故阳之动，始于温，盛于暑（1）；阴之动，始于清，盛于寒（2）。春夏秋冬，各差其分（3）。**
+> **故阳之动，始于温，盛于暑；阴之动，始于清，盛于寒。春夏秋冬，各差其分。**
 >
-> 《素问·至真要大论》
+> ——《素问•至真要大论》
 
-> “各差其分”，指实际气候变化与季节相差的时间。《素问·六元正纪大论》和《素问·至真要大论》认为时间差数为：三十天，或三十日有余。
+> “各差其分”，指实际气候变化与季节相差的时间。《素问•六元正纪大论》和《素问•至真要大论》认为时间差数为：三十天，或三十日有余。
 >
 > 《黄帝内经讲解-阴阳五行学说-（二）四时阴阳之气的运动变化规律》
 
@@ -306,15 +308,15 @@
 
 中医把一年天气的能量变化分为六个阶段，为风、火（热）、暑、湿、燥、寒，为六气，每气六十天八十七刻半。一年地气的能量变化分为五个阶段，为木、火、土、金、水，为五运（**又叫五行**），每运七十三日零五刻。
 
-> 鬼臾区曰：寒暑燥湿风火，天之阴阳也，三阴三阳上奉之（2）木火土金水，地之阴阳也，生长化收藏下应之
+> 鬼臾区曰：寒暑燥湿风火，天之阴阳也，三阴三阳上奉之，木火土金水，地之阴阳也，生长化收藏下应之。
 >
-> 《素问•天元纪大论》
+> ——《素问•天元纪大论》
 
 > “五运”，亦称五行。张介宾说：“五运，即五行也。”
 >
 > 《黄帝内经讲解-五行、阴阳是自然界的根本规律》
 
-###### 天之六气
+* **天之六气**
 
 天之六气时间划分如下：
 
@@ -334,7 +336,7 @@
 
 `《黄帝内经讲解-阴阳五行学说-三阴三阳与六气的关系》`
 
-###### 地之五运
+* **地之五运**
 
 地之五运时间划分如下：
 
@@ -358,9 +360,9 @@
 
 `关于天气，这里要注意天之六气和三阴三阳的关系。两者之间的关系很紧密，又不完全等同。`
 
-`三阴三阳是一年之内的太阳阳气与地球阴气的比例波动变化,是地球和太阳之间系统的阴阳划分。`
+`三阴三阳是一年之内的太阳阳气与地球阴气的比例波动变化，是地球和太阳之间系统的阴阳划分。`
 
-`六气是一年内天气的波动变化,是天气、地气系统中，天气自身的阴阳划分。`
+`六气是一年内天气的波动变化，是天气、地气系统中，天气自身的阴阳划分。`
 
 `两者不在一个系统中，但是有一定的对应关系。三阴三阳的变化导致了天气的变化。`
 
@@ -370,9 +372,9 @@
 
 地气五运对气交之处的影响称为五运之气：风、热、湿、燥、寒，又称中运，分别与地气的木、火、土、金、水对应。
 
-> 神在天为风，在地为木(1),在天为热，在地为火，在天为湿，在地为土，在天为燥，在地为金，在天为寒，在地为水(2),故在天为气，在地成形，形气相感而化生万物矣(3)。
+> 神在天为风，在地为木，在天为热，在地为火，在天为湿，在地为土，在天为燥，在地为金，在天为寒，在地为水，故在天为气，在地成形，形气相感而化生万物矣。
 >
-> 《素问•天元纪大论》
+> ——《素问•天元纪大论》
 
 > 为了概括和说明五气（风、火、湿、燥、寒）的基本性质及其运动规律，故分別以木运、火运、土运、金运、水运相称。同时又根据五行属性配以天干，所以张介宾说：“五行之应天干，是为五运。”....
 >
@@ -402,7 +404,7 @@
 
 
 
-![](img/%E6%B0%94%E4%BA%A4.svg)
+<img src="img/%E6%B0%94%E4%BA%A4.svg" style="zoom: 50%;" />
 
 > **五运和六气都要分主一年各个季节、气候的变化**，......
 >
@@ -442,7 +444,7 @@
 
 > 气相胜者和，不相胜者病；重感于邪则甚也。
 >
-> 《素问-气交变大论》
+> 《素问•气交变大论》
 
 > 如《素问•气交变大论》所说：“岁木太过，风气流行，脾土受邪。民病飧泄食减，体重烦冤，肠鸣腹支满。甚则忽忽善怒，眩冒巅疾。……反胁痛而吐甚。”
 >
@@ -456,13 +458,13 @@
 
 地气的变化对动植物生命的成长过程有重要作用。在平衡范围内，温度偏高的时候，生命活动活跃；温度偏低的时候，生命活动低沉。因此，地气五行与生命的生、长、化、收、藏的过程相对应，比如地气处于木气阶段的时候，土壤开始温暖，种子开始发芽，所以木气主生。其它类似，火气主长、土气主化、金气主收、水气主藏。
 
-> 木火土金水，地之阴阳也，生长化收藏下应之
+> 木火土金水，地之阴阳也，生长化收藏下应之。
 >
 > 《素问•天元纪大论》
 
 五行在维持生命的过程中，需要保持相互之间的平衡。五行生克就是来源与此，五行的生克乘侮内容在教材中叙述的比较好。大家可以参考光明教材《概论》和《内经》的五行学说部分，此处不细说。
 
-> **夫五运之政，犹权衡也(1)，高者抑之，下者举之，化之应之，变者复之，此生长化成收藏之理，气之常**也，失常则天地四塞矣(2)。
+> **夫五运之政，犹权衡也，高者抑之，下者举之，化者应之，变者复之，此生长化收藏之理，气之常也，失常则天地四塞矣。**
 >
 > 《素问•气交变大论》
 
@@ -486,7 +488,7 @@
 
 五行木、火、土、金、水这五种代号所指的五种物质，其本性和五行的内涵有一定相似性，比如一般情况下，水润下偏寒，火炎上偏热，木有生发特性，金有杀伐收敛的特性，所以被用来代表平衡过程中的五种状态，但不可机械的认为五行就是五种物质。
 
-> 《尚书·洪范》对五行的基本属性作了部分概括：“五行：一曰水，二曰火，三曰木，四曰金，五曰土。水曰润下，火曰炎上，木曰曲直，金曰从革，土爰稼穡”。...
+> 《尚书•洪范》对五行的基本属性作了部分概括：“五行：一曰水，二曰火，三曰木，四曰金，五曰土。水曰润下，火曰炎上，木曰曲直，金曰从革，土爰稼穡”。...
 >
 > 五行的基本属性，是由原始的五种具体物质的属性引伸并高度抽象、概括而成。因此，它又不完全局限于原始五种具体物质的范畴，而是概括了自然界五大类事物的属性。
 >
@@ -494,7 +496,7 @@
 
 
 
-#### 2.2.2天地物质交互平衡 
+#### 2.2.2 天地物质交互平衡
 
 前面说的是天地之间的能量交互，除此之外天地之间还有物质上的交互。
 
@@ -512,21 +514,21 @@
 >
 > 故清阳出上窍，浊阴出下窍；清阳发腠理，浊阴走五脏；清阳实四肢，浊阴归六腑。
 >
-> 《素问-阴阳应象大论》
+> ——《素问•阴阳应象大论》
 
-> **气之升降，天地之更用也(l)。……升已而降，降者谓天；降已而升，升者谓地(2)。天气下降，气流于地；地气上升，气腾于天(3)。故高下相召，升降相因，而变作矣(4)。**
+> **气之升降，天地之更用也。……升已而降，降者谓天；降已而升，升者谓地。天气下降，气流于地；地气上升，气腾于天。故高下相召，升降相因，而变作矣。**
 >
-> 《素问·六微旨大论》
+> ——《素问•六微旨大论》
 
 > 自然界大气的运动，是天地阴阳二气相互作用的结果。天之阳气具有温暖、发散的特性，地之阴气具有寒冷、凝结的特性，这两种属性不同的气，常常相互作用，相互影响，因而引起大气不断上升下降的运动。《内经》曾举云雨的变化为例来说明这一问题，比如地面的水，由于天空（太阳）热力的蒸发，可以化气上升而为云，所谓“地气上为云”，“云出天气”；天空的云，遇到寒冷的阴气，便会凝结下降而为雨，所谓“天气下为雨”，“雨出地气”。可以看出天地阴阳之气在不断地进行上升下降的运动。
 >
-> （3）天气下降，气就下流于大地；地气上升，气就上腾于天空。天气属阳，下流于地后便转化为阴；地气属阴，上腾于天后便转化为阳。这就形成了天地阴阳之气的相互转化。
+> 天气下降，气就下流于大地；地气上升，气就上腾于天空。天气属阳，下流于地后便转化为阴；地气属阴，上腾于天后便转化为阳。这就形成了天地阴阳之气的相互转化。
 >
-> 《黄帝内经讲解-阴阳五行学说-（十四）天地阴阳之气的升降转化》
+> 《黄帝内经讲解-阴阳五行学说—（十四）天地阴阳之气的升降转化》
 
 自然界的水循环过程是海水在太阳的照射下，变化为水蒸气进入空中成为云，云在风的作用下漂浮到陆地上空，变为雨下降到大地，滋润万物生长，然后形成河流，最后又流回大海。中医认为人体的水液循环也是这种道理，有液态与气态的相互转变，以及气态物质的传送和液态物质的传送。所以说天人合一，天地是一个大自然环境，人体是一个小的自然环境，想理解中医的人体观必须从自然观入手。
 
-#### 2.2.3小结
+#### 2.2.3 小结
 
 天气、地气在能量与物质上各自平衡，并且能正常的交互，是自然界生命繁荣生长的重要条件。后面学习人体的时候，会谈到人体有多种天地关系，比如脏为地、腑为天，互为表里，说明两者会象自然界的天气、地气一样相互影响，其它天地关系也是这个原理。
 
@@ -538,7 +540,7 @@
 
 
 
-## 3平衡三要素：
+## 3、平衡三要素：
 
 ### 作用：
 
@@ -549,8 +551,8 @@
 地表上下，气交之地。
 
 > *天地者，万物之上下也；*
-
-《素问-阴阳应象大论篇第五》
+>
+> ——《素问•阴阳应象大论篇第五》
 
 ### 指标:
 
@@ -572,7 +574,7 @@
 
 空气、土壤、水、阳光几大要素除自身的质与量要平衡外，相互之间的配合也要平衡。比如地气要有一定的量升入空中，天气要有一定的量降入地下。这就是升浮降沉的平衡，既不能升之太过也不能升之不及，既不能降之太过也不能降之不及。升降出入的异常也是疾病的主要原因之一。
 
-## 4总结
+## 4、总结
 
 关于自然界的气候规律，大部分都是常识的东西。这里只是从阴阳平衡的角度重新梳理了一下，并从中引出了中医一些重要概念的来历。比如三阴三阳（厥阴、少阴、太阴、少阳、阳明、太阳）、六气（风、热、暑、湿、燥、寒）、五行（木、火、土、金、水），还有升浮降沉、寒热温凉和阴阳互根互用等等。
 
@@ -588,17 +590,17 @@
 
 这些概念掌握后，才初步具备学习中医的基础，后面我们就可以开始谈人体了。
 
-## 5其它方面（探讨）：
+## 5、其它方面（探讨）：
 
 自然界的奥秘是无穷的，还有很多方面是目前没有完全清晰的，下面列出一些有待进一步探讨的问题。
 
-#### 5.1 如何理解自然界海洋中的生物？海洋也算气交之地么？
+### 5.1 如何理解自然界海洋中的生物？海洋也算气交之地么？
 
 根据天气地气相交的道理看，海洋中生物密集的区域也是气交之地。海洋的生物特别是深海的生物，虽然没有直接接触到空气，但是需要海水中溶解的氧气才能生存。而深海的氧气是海洋表面的含氧水通过升降循环的方式送到深海处，因此深海生物也是从天地中获取物资和能量来生存的。
 
 探讨这个道理可以给我们一些启发，人体大部分组织器官是在液体当中，其获得氧气的原理是否和海洋生物获得天气的原理有相似之处？
 
-#### 5.2 如何理解月亮的作用？
+### 5.2 如何理解月亮的作用？
 
 月亮古代称为太阴，与太阳相对。因此其对自然界应该存在偏阴性的作用，但是具体如何影响，目前的资料还不清晰。能证实的是其对自然界的地气有明显的影响（大海潮汐），以及对女性月经的影响。
 
@@ -606,13 +608,13 @@
 
 也有人将“阳化气、阴成形”中的阳理解为太阳，阴理解为太阴（月亮），认为形气互转过程中，太阳的力量让形化为气，月亮的力量让气化为形，可供参考。
 
-> **是故天温日明，则人血淖液而卫气浮，故血易泻，气易行(1)；天寒日阴，故人血凝泣而卫气沉(2)。月始生，则血气始精，卫气始行(3)；月郭满，则血气实，肌肉坚(4)；月郭空，则肌肉减，经络虚，卫气去，形独居(5)。是以因天时而调血气也。是以天寒无刺，天温无疑。月生无泻，月满无补，月郭空无治，是谓得时而调之(6)**
+> **是故天温日明，则人血淖液而卫气浮，故血易泻，气易行；天寒日阴，故人血凝泣而卫气沉。月始生，则血气始精，卫气始行；月郭满，则血气实，肌肉坚；月郭空，则肌肉减，经络虚，卫气去，形独居。是以因天时而调血气也。是以天寒无刺，天温无疑。月生无泻，月满无补，月郭空无治，是谓得时而调之。**
 >
-> 《素问•八正神明论》
+> ——《素问•八正神明论》
 
-> **人与天地相参也，与日月相应也(1)。故月满则海水西盛，人血气积，肌肉充，皮肤致，毛发坚，腠理郄，烟垢著(2)，当是之时，虽遇贼风，其入浅不深(3)；至其月郭空，则海水东盛，人气血虚，其卫气去，形独居，肌肉减，皮肤纵，腠理开，毛发残，腠理薄，烟垢落(4)，当是之时，遇贼风，则其入深，其病人也卒暴(5)。**
+> **人与天地相参也，与日月相应也。故月满则海水西盛，人血气积，肌肉充，皮肤致，毛发坚，腠理郄，烟垢著，当是之时，虽遇贼风，其入浅不深；至其月郭空，则海水东盛，人气血虚，其卫气去，形独居，肌肉减，皮肤纵，腠理开，毛发残，腠理薄，烟垢落，当是之时，遇贼风，则其入深，其病人也卒暴。**
 >
-> 《灵枢•岁露》
+> ——《灵枢•岁露》
 
 > 潮水涨落的原因，是由于日月吸力的影响，其中尤以月球的影响为大。在一昼夜中，地球绕太阳自转一周，日月所行的度数，和地球常有背向的不同，向则吸力较大而潮涨，背则吸力较小而潮退。在阴历的朔望两天，日月两种吸力相合，潮最大，上弦和下弦两天，日月两种吸力互消，潮最小。古人掌握了这一规律，从实践中体会到，人体的气血和各部分组织的生理活动，对此有着一定的感应能力和不同的反应，于是指出“因天时而调血气”的针刺原则。
 >
@@ -620,7 +622,7 @@
 
 
 
-#### 5.3 北斗
+### 5.3 北斗
 
 北斗七星在古代有神明的意思，教材的解释是古代通过北斗的斗柄指向确定季节，所以为“神明之纪”，可以参考。
 
@@ -630,7 +632,7 @@
 
 
 
-> **太虚寥廓 ，肇基化元 ，万物资始 (1) ，五运终天 ，布气真灵，总统坤元(2)，九星悬朗，七曜周旋（3），曰阴曰阳，曰柔曰刚，幽显既位，寒暑弛张(4)，生生化化， 品物咸章(5)。**....
+> **太虚寥廓，肇基化元，万物资始，五运终天，布气真灵，总统坤元，九星悬朗，七曜周旋，曰阴曰阳，曰柔曰刚，幽显既位，寒暑弛张，生生化化，品物咸章。**
 >
 > 王冰注： "九星谓天蓬、天芮、天冲 、 天辅、天禽、天心、天任、天柱、天英”。又指北斗
 >
@@ -638,7 +640,7 @@
 >
 > 《黄帝内经讲解-人与自然-四、《内经》的自然观》
 
-#### 5.4 为什么天分六气、地分五运？
+### 5.4 为什么天分六气、地分五运？
 
 天气为何分成六份，地气为何分为五份？这个问题目前还没有明确答案。目前是因为内经如此划分，并且中医学中到处都使用了这个概念，所以我们学习的时候需要记住。至于其原理，下面是一些相关探讨，供参考。
 
@@ -652,17 +654,17 @@
 
 内经中多处提到五行、十二经络与音律、颜色的关系。比如在木在音为角、在色为苍；火在音为征、在色为赤；土在音为宫、在色为黄；金在音为商、在色为白；水在音为羽、在色为黑；
 
-> 东方生风，风生木，木生酸，**酸生肝**，肝生筋，筋生心，肝主目。其在天为玄，在人为道，在地为化。化生五味，道生智，玄生神，神在天为风，在地为木，在体为筋，在脏为肝。**在色为苍**，**在音为角**，在声为呼，在变动为握，在窍为目，在味为酸，在志为怒。。。。。
+> 东方生风，风生木，木生酸，**酸生肝**，肝生筋，筋生心，肝主目。其在天为玄，在人为道，在地为化。化生五味，道生智，玄生神，神在天为风，在地为木，在体为筋，在脏为肝。**在色为苍**，**在音为角**，在声为呼，在变动为握，在窍为目，在味为酸，在志为怒……
 
 > 六律建阴阳诸经而合之十二月、十二辰、十二节、十二经水、十二时、十二经脉者，此五脏六腑之所以应天道。
 >
-> 《灵枢-经别》
+> ——《灵枢•经别》
 
 王唯工教授出版《气的乐章》提出，人体十二经的频率是不同的，是可以测量的。
 
 基于这些资料，从频率的角度探讨中医内涵可能是一条让传统中医与现代科学结合的道路。
 
-#### 5.5 天不足西北，地不满东南
+### 5.5 天不足西北，地不满东南
 
 内经起源于中国，处于北半球，所以谈到南热北寒东温西凉都是在中国这个地域角度上说的。
 
@@ -678,7 +680,7 @@
 
 > 岐伯曰：东方阳也，阳者其精并于上，并于上则上明而下虚，故使耳目聪明而手足不便。西方阴也，阴者其精并于下，并于下则下盛而上虚，故其耳目不聪明而手足便也。故俱感于邪，其在上则右甚，在下则左甚，此天地阴阳所不能全也，故邪居之。
 >
-> 《素问-阴阳应象大论》
+> ——《素问•阴阳应象大论》
 
 > 帝曰：天不足西北，左寒而右凉；地不满东南，右热而左温，其故何也？
 > 　　
@@ -697,9 +699,9 @@
 >
 > 岐伯曰：西北之气，散而寒之，东南之气，收而温之，所谓同病异治也。故曰气寒气凉，治以寒凉，行水渍之；气温气热，治以温热，强其内守，必同其气，可使平也，假者反之。
 >
-> 《黄帝内经-五常政大论》
+> ——《黄帝内经•五常政大论》
 
-#### 5.6 六气与三阴三阳的对应问题：
+### 5.6 六气与三阴三阳的对应问题：
 
 五运木火土金水和六气风热暑湿燥寒是天气、地气在某一地点按照一年周期的能量波动来划分的，比较规律。但是三阴三阳和运气的对应关系却不规律，厥阴对风木，少阳对热（相火），少阴对暑（君火），太阴对湿土，阳明对燥金，太阳对寒水。这个问题是个非常大的难点，中医至今也没有特别公认的合理解释。
 
@@ -713,7 +715,7 @@
 
 > 黄帝问曰：呜呼，远哉！天之道也，如迎浮云，若视深渊尚可测，迎浮云莫知其极。夫子数言谨奉天道，余闻而藏之，心私异之，不知其所谓也？愿夫子溢志尽言其事，令终不灭，久而不绝，天之道，可得闻乎？
 >
-> 《素问-六微旨大论》
+> ——《素问•六微旨大论》
 
 前述一年三阴三阳按照一阴为厥阴，二阴为少阴，三阴为太阴，一阳为少阳、二阳为阳明、三阳为太阳。这个顺序是一定的，但是其是否叠加其它要素还不得而知，中间应该缺失了某些条件。因此在三阴三阳与六气的对应上并不规律，目前只能作为一个结论来记住：厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
 
@@ -723,15 +725,19 @@
 >
 > 《黄帝内经讲解-三阴三阳配六气及标本中气之间的关系》
 
-> **帝曰：其于三阴三阳，合之奈何？鬼臾区曰：子午之岁，上见少阴；丑未之岁，上见太阴；寅申之岁，上见少阳；卯酉之岁，上见阳明；辰戌之岁，上见太阳；已亥之岁，上见厥阴。少阴所谓标也，厥阴所谓终也（1）。厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之；阳明之上；燥气主之；太阳之上，寒气主之。所谓本也，是谓六元(2)。**
+> **帝曰：其于三阴三阳，合之奈何？**
+> **鬼臾区曰：子午之岁，上见少阴；丑未之岁，上见太阴；寅申之岁，上见少阳；卯酉之岁，上见阳明；辰戌之岁，上见太阳；巳亥之岁，上见厥阴。少阴所谓标也，厥阴所谓终也。厥阴之上，风气主之；少阴之上，热气主之；太阴之上，湿气主之；少阳之上，相火主之；阳明之上；燥气主之；太阳之上，寒气主之。所谓本也，是谓六元。**
 >
-> 《素问•天元纪大论》
+> ——《素问•天元纪大论》
 
 ## 题目
 
-1. 中医中的天地指的是自然界，自然界能够形成适宜的温度，是因为----提供了适度的能量。
-2. 一年中太阳阳气与地球阴气互有进退，不同的阴阳比例形成了三阴三阳，一阴为厥阴，二阴为----，三阴为太阴，一阳为少阳、二阳为-----、三阳为太阳。
-3. 中医把一年天气的变化分为六个阶段，为风、火（热）、暑、---、-----、寒，为六气。六气的计算是以哪个节气作为起点-----
-4. 中医把一年地气的变化分为五个阶段，为木、火、----、-----、水，为五运。五运的计算是以哪个节气作为起点-----
-5. 天地之气在气交之地的能量交互是由天之本源六气和地之五运之气共同作用，其中地气五运对此处的影响称为五气风、热、-----、-------、寒，五气与天之本源六气是有区别的。
-6. 天地之气在气交之地的物质交互以云雨的形式进行，地气上为----，天气下为------
+1. 中医中的天地指的是自然界，自然界能够形成适宜的温度，是因为 __ __ 提供了适度的能量。
+2. 一年中太阳阳气与地球阴气互有进退，不同的阴阳比例形成了三阴三阳，一阴为厥阴，二阴为 __ __ ，三阴为太阴，一阳为少阳、二阳为 __ __ 、三阳为太阳。
+3. 中医把一年天气的变化分为六个阶段，为风、火（热）、暑、 __ 、 __ 、寒，为六气。六气的计算是以 __ __ 节气作为起点。
+4. 中医把一年地气的变化分为五个阶段，为木、火、 __ 、 __ 、水，为五运。五运的计算是以 __ __ 节气作为起点。 
+5. 天地之气在气交之地的能量交互是由天之本源六气和地之五运之气共同作用，其中地气五运对此处的影响称为五气风、热、 __ 、 __ 、寒，五气与天之本源六气是有区别的。
+6. 天地之气在气交之地的物质交互以云雨的形式进行，地气上为 __ __ ，天气下为 __ __ 。
+
+
+
